update translation of articles/ to Russian Reviewed by: andy Differential Revision: https://reviews.freebsd.org/D53848

--- a/documentation/content/ru/articles/bsdl-gpl/_index.adoc
+++ b/documentation/content/ru/articles/bsdl-gpl/_index.adoc
@@ -58,7 +58,7 @@ toc::[]
 
 В 1969 году Министерство юстиции США обвинило IBM в уничтожении бизнесов путем объединения бесплатного программного обеспечения с аппаратным обеспечением IBM. В результате этого иска IBM прекратила практику объединения; то есть, программное обеспечение стало независимым продуктом, отдельным от аппаратного обеспечения.
 
-В 1968 году компания Informatics представила приложение — первый коммерческий хит продукт, и быстро утвердила концепцию программного продукта, программной компании и очень высоких норм прибыли. Informatics разработала бессрочную лицензию, которая теперь является стандартом во всей компьютерной отрасли, при которой право собственности никогда не передается клиенту.
+В 1968 году компания Informatics представила приложение — первый коммерческий хит продукт, и быстро утвердила концепцию программного продукта, программной компании и очень высоких норм прибыли. Informatics разработала бессрочную лицензию, которая теперь является стандартом во всей компьютерной отрасли, при которой право собственности никогда не передаётся клиенту.
 
 [[unix-license]]
 == Unix с точки зрения лицензирования BSD
