--- a/documentation/content/ru/articles/bsdl-gpl/_index.po
+++ b/documentation/content/ru/articles/bsdl-gpl/_index.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
 "POT-Creation-Date: 2022-02-01 09:21-0300\n"
-"PO-Revision-Date: 2025-07-27 04:45+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/articlesbsdl-gpl/ru/>\n"
@@ -128,7 +128,7 @@ msgstr ""
 "коммерческий хит продукт, и быстро утвердила концепцию программного "
 "продукта, программной компании и очень высоких норм прибыли. Informatics "
 "разработала бессрочную лицензию, которая теперь является стандартом во всей "
-"компьютерной отрасли, при которой право собственности никогда не передается "
+"компьютерной отрасли, при которой право собственности никогда не передаётся "
 "клиенту."
 
 #. type: Title ==
