--- a/documentation/content/ru/articles/committers-guide/_index.po
+++ b/documentation/content/ru/articles/committers-guide/_index.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
 "POT-Creation-Date: 2025-11-08 16:17+0000\n"
-"PO-Revision-Date: 2025-11-10 04:45+0000\n"
+"PO-Revision-Date: 2025-11-13 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/articlescommitters-guide_index/ru/>\n"
@@ -61,7 +61,7 @@ msgstr ""
 "Почти все разработчики FreeBSD имеют права на коммит в один или несколько "
 "репозиториев. Однако некоторые разработчики не имеют таких прав, и часть "
 "информации здесь применима и к ним. (Например, некоторые люди имеют права "
-"только для работы с базой данных отчетов о проблемах.) Дополнительную "
+"только для работы с базой данных отчётов о проблемах.) Дополнительную "
 "информацию можно найти в crossref:committers-guide[non-committers, Вопросы, "
 "специфичные для разработчиков без прав на коммит]."
 
@@ -185,7 +185,7 @@ msgstr "developers (технически называемый all-developers), d
 #: documentation/content/en/articles/committers-guide/_index.adoc:92
 #, no-wrap
 msgid "_Core Team monthly reports_"
-msgstr "_Ежемесячные отчеты основной команды (Core Team)_"
+msgstr "_Ежемесячные отчёты основной команды (Core Team)_"
 
 #. type: Table
 #: documentation/content/en/articles/committers-guide/_index.adoc:94
@@ -197,7 +197,7 @@ msgstr "[.filename]#/home/core/public/reports# на кластере `FreeBSD.or
 #: documentation/content/en/articles/committers-guide/_index.adoc:95
 #, no-wrap
 msgid "_Ports Management Team monthly reports_"
-msgstr "_Ежемесячные отчеты команды управления портами_"
+msgstr "_Ежемесячные отчёты команды управления портами_"
 
 #. type: Table
 #: documentation/content/en/articles/committers-guide/_index.adoc:97
@@ -3249,7 +3249,7 @@ msgid ""
 "improving code quality and benefit everyone involved. It is also a good idea "
 "to examine the git diff results before importing them into the vendor area."
 msgstr ""
-"Крайне важно убедиться, что импортируемый исходный код получен из надежного "
+"Крайне важно убедиться, что импортируемый исходный код получен из надёжного "
 "источника. Многие проекты с открытым исходным кодом используют "
 "криптографические подписи для подписывания изменений кода, тегов git и/или "
 "tar-архивов с исходным кодом. Всегда проверяйте эти подписи и используйте "
@@ -4201,7 +4201,7 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/articles/committers-guide/_index.adoc:1472
 msgid "Use"
-msgstr "Используйте"
+msgstr "Использование"
 
 #. type: delimited block . 4
 #: documentation/content/en/articles/committers-guide/_index.adoc:1476
@@ -7405,7 +7405,10 @@ msgstr "`PR:`"
 #: documentation/content/en/articles/committers-guide/_index.adoc:2585
 #, no-wrap
 msgid "The problem report (if any) which is affected (typically, by being closed) by this commit. Multiple PRs may be specified on one line, separated by commas or spaces."
-msgstr "Номер отчета о проблеме (если есть), на который влияет данный коммит (обычно путем закрытия). Можно указать несколько номеров PR в одной строке, разделяя их запятыми или пробелами."
+msgstr ""
+"Номер отчёта о проблеме (если есть), на который влияет данный коммит (обычно "
+"путем закрытия). Можно указать несколько номеров PR в одной строке, разделяя "
+"их запятыми или пробелами."
 
 #. type: Table
 #: documentation/content/en/articles/committers-guide/_index.adoc:2586
@@ -8917,7 +8920,7 @@ msgid ""
 "Wiki access list."
 msgstr ""
 "В вики FreeBSD есть мини-руководство для разработчиков, которые "
-"заинтересованы в работе с отчетами анализа Coverity(R): https://wiki.freebsd."
+"заинтересованы в работе с отчётами анализа Coverity(R): https://wiki.freebsd."
 "org/CoverityPrevent[https://wiki.freebsd.org/CoverityPrevent]. Обратите "
 "внимание, что это мини-руководство доступно только разработчикам FreeBSD, "
 "поэтому если вы не можете открыть эту страницу, вам нужно будет попросить "
@@ -10152,10 +10155,10 @@ msgid ""
 msgstr ""
 "Коммуникации с Основной командой изначально будут рассматриваться как "
 "конфиденциальные. Однако в конечном итоге большая часть деятельности "
-"Основной команды будет обобщена в ежемесячных или квартальных отчетах ядра. "
+"Основной команды будет обобщена в ежемесячных или квартальных отчётах ядра. "
 "Будет уделено внимание тому, чтобы избежать разглашения каких-либо "
 "чувствительных деталей. Записи по некоторым особо чувствительным темам могут "
-"вообще не попадать в отчеты и будут храниться только в частных архивах "
+"вообще не попадать в отчёты и будут храниться только в частных архивах "
 "Основной команды."
 
 #. type: Plain text
@@ -11453,10 +11456,10 @@ msgid ""
 msgstr ""
 "Проверьте, что значения ``PKGORIGIN`` указаны верно. Система портов "
 "использует запись `CATEGORIES` каждого порта для создания его `PKGORIGIN`, "
-"который служит для связи установленных пакетов с директорией порта, из "
+"который служит для связи установленных пакетов с каталогом порта, из "
 "которого они были собраны. Если эта запись неверна, такие распространённые "
-"инструменты для работы с портами, как man:pkg-version[8] и man:"
-"portupgrade[1], не будут работать."
+"инструменты для работы с портами, как man:pkg-version[8] и man:portupgrade[1]"
+", не будут работать."
 
 #. type: Plain text
 #: documentation/content/en/articles/committers-guide/_index.adoc:3715
@@ -11631,7 +11634,7 @@ msgid ""
 "regression) are aggregated at link:https://pkg-status.FreeBSD.org[pkg-status."
 "FreeBSD.org]."
 msgstr ""
-"Отчеты по всем сборкам пакетов (официальные, экспериментальные и без "
+"Отчёты по всем сборкам пакетов (официальные, экспериментальные и без "
 "регрессии) агрегируются на link:https://pkg-status.FreeBSD.org[pkg-status."
 "FreeBSD.org]."
 
