--- a/documentation/content/ru/articles/contributing/_index.po
+++ b/documentation/content/ru/articles/contributing/_index.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
 "POT-Creation-Date: 2025-11-08 16:17+0000\n"
-"PO-Revision-Date: 2025-11-09 04:45+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/articlescontributing_index/ru/>\n"
@@ -198,7 +198,7 @@ msgstr ""
 "дополнительные документы или проверить, что переводы актуальны и корректны. "
 "Сначала ознакомьтесь с extref:{fdp-primer}translations[FAQ по переводам, "
 "translations] в Руководстве проекта документации FreeBSD. Вы не обязаны "
-"переводить каждую документацию FreeBSD — как волонтер, вы можете переводить "
+"переводить каждый документ FreeBSD — как волонтер, вы можете переводить "
 "столько, сколько пожелаете. Как только кто-то начинает переводить, к этому "
 "процессу почти всегда присоединяются другие. Если у вас есть время и силы "
 "перевести только часть документации, пожалуйста, переведите инструкции по "
@@ -496,7 +496,7 @@ msgstr ""
 #: documentation/content/en/articles/contributing/_index.adoc:168
 #, no-wrap
 msgid "Bug Reports and General Commentary"
-msgstr "Отчеты об ошибках и общие комментарии"
+msgstr "Отчёты об ошибках и общие комментарии"
 
 #. type: Plain text
 #: documentation/content/en/articles/contributing/_index.adoc:173
@@ -509,7 +509,7 @@ msgid ""
 msgstr ""
 "Идея или предложение, представляющие _общий_ технический интерес, должны "
 "быть отправлены на {freebsd-hackers}. Аналогично, люди, заинтересованные в "
-"подобных вещах (и готовые терпеть _высокий_ объем почты!), могут подписаться "
+"подобных вещах (и готовые терпеть _большой_ объём почты!), могут подписаться "
 "на {freebsd-hackers}. Дополнительную информацию об этом и других списках "
 "рассылки см. в extref:{handbook}eresources[The FreeBSD Handbook, eresources-"
 "mail]."
@@ -687,7 +687,7 @@ msgid ""
 "number.  Keep this tracking number so that you can update us with details "
 "about the problem."
 msgstr ""
-"После подачи отчета вы должны получить подтверждение вместе с номером для "
+"После подачи отчёта вы должны получить подтверждение вместе с номером для "
 "отслеживания. Сохраните этот номер, чтобы вы могли сообщить нам "
 "дополнительные сведения о проблеме."
 
@@ -825,12 +825,12 @@ msgid ""
 msgstr ""
 "После того как у вас есть набор изменений (которые вы можете проверить с "
 "помощью команды man:patch[1]), вам следует отправить их для включения в "
-"FreeBSD в виде отчета об ошибке. _Не отправляйте_ изменения просто на "
+"FreeBSD в виде отчёта об ошибке. _Не отправляйте_ изменения просто на "
 "{freebsd-hackers}, иначе они могут потеряться! Мы очень ценим ваши "
 "предложения (это добровольный проект!); поскольку мы заняты, мы не всегда "
 "можем обработать их сразу, но они останутся в базе данных PR, пока мы не "
 "дойдем до них. Укажите, что это предложение изменений, добавив `[PATCH]` в "
-"заголовок отчета."
+"заголовок отчёта."
 
 #. type: Plain text
 #: documentation/content/en/articles/contributing/_index.adoc:257
@@ -1687,7 +1687,7 @@ msgstr ""
 #: documentation/content/en/articles/contributing/_index.adoc:506
 #, no-wrap
 msgid "Investigate bug reports and PRs related to your port"
-msgstr "Изучать отчеты об ошибках и PR, связанные с вашим портом"
+msgstr "Изучать отчёты об ошибках и PR, связанные с вашим портом"
 
 #. type: delimited block = 4
 #: documentation/content/en/articles/contributing/_index.adoc:509
@@ -1729,7 +1729,7 @@ msgid ""
 "by users."
 msgstr ""
 "Ошибки могут быть сообщены вам по электронной почте через https://bugs."
-"FreeBSD.org/search/[базу данных отчетов о проблемах]. Также пользователи "
+"FreeBSD.org/search/[базу данных отчётов о проблемах]. Также пользователи "
 "могут сообщать об ошибках напрямую вам."
 
 #. type: Plain text
@@ -1809,7 +1809,7 @@ msgstr "Стеки вызовов функций"
 #. type: Plain text
 #: documentation/content/en/articles/contributing/_index.adoc:540
 msgid "Eliminate incorrect reports"
-msgstr "Устраните некорректные отчеты"
+msgstr "Устраните некорректные отчёты"
 
 #. type: Plain text
 #: documentation/content/en/articles/contributing/_index.adoc:546
@@ -1821,7 +1821,7 @@ msgid ""
 "your capabilities to fix, you can also patch the port so that the fix is "
 "applied before the next upstream release."
 msgstr ""
-"Некоторые отчеты об ошибках могут быть некорректными. Например, пользователь "
+"Некоторые отчёты об ошибках могут быть некорректными. Например, пользователь "
 "мог просто неправильно использовать программу; или установленные пакеты "
 "могут быть устаревшими и требовать обновления. Иногда сообщаемая ошибка не "
 "специфична для FreeBSD. В этом случае следует сообщить об ошибке "
@@ -1971,7 +1971,7 @@ msgid ""
 "over synopses you should be able to find something interesting to work on."
 msgstr ""
 "Вы можете использовать https://bugs.freebsd.org/search[веб-интерфейс] базы "
-"данных отчетов о проблемах для поиска и просмотра нерешенных PR. Большинство "
+"данных отчётов о проблемах для поиска и просмотра нерешенных PR. Большинство "
 "PR для портов — это обновления, но с небольшим поиском и беглым просмотром "
 "описаний вы сможете найти что-то интересное для работы."
 
@@ -2080,7 +2080,7 @@ msgstr ""
 msgid ""
 "The https://bugs.freebsd.org/bugzilla/query.cgi[Problem Report database]."
 msgstr ""
-"https://bugs.freebsd.org/bugzilla/query.cgi[База данных отчетов о проблемах]."
+"https://bugs.freebsd.org/bugzilla/query.cgi[База данных отчётов о проблемах]."
 
 #. type: delimited block = 4
 #: documentation/content/en/articles/contributing/_index.adoc:625
