--- a/documentation/content/ru/articles/contributors/_index.adoc
+++ b/documentation/content/ru/articles/contributors/_index.adoc
@@ -201,5 +201,5 @@ https://www.freebsd.org/donations/[FreeBSD Donations Liaison] включает h
 === Особые участники
 
 * http://www.osd.bsdi.com/[BSDi] (ранее Walnut Creek CDROM) пожертвовали больше, чем мы можем выразить (подробности см. в разделе 'О проекте FreeBSD' extref:{handbook}[FreeBSD Handbook]). В частности, мы хотели бы поблагодарить их за первоначальное оборудование, использованное для `freefall.FreeBSD.org`, нашей основной машины разработки, и для `thud.FreeBSD.org`, тестовой и сборочной системы. Мы также благодарны им за финансирование различных участников на протяжении многих лет и предоставление неограниченного доступа к их T1-подключению к Интернету.
-* Компания http://www.interface-business.de/[interface business GmbH, Дрезден] терпеливо поддерживала {joerg}, который часто отдавал предпочтение работе с FreeBSD вместо оплачиваемой работы и использовал их (довольно дорогое) интернет-подключение EUnet, когда его личное соединение становилось слишком медленным или ненадежным для работы.
+* Компания http://www.interface-business.de/[interface business GmbH, Дрезден] терпеливо поддерживала {joerg}, который часто отдавал предпочтение работе с FreeBSD вместо оплачиваемой работы и использовал их (довольно дорогое) интернет-подключение EUnet, когда его личное соединение становилось слишком медленным или ненадёжным для работы.
 * http://www.bsdi.com/[Berkeley Software Design, Inc.] предоставила свой код эмулятора DOS для остального мира BSD, который используется в команде `doscmd`.
