--- a/documentation/content/ru/articles/contributors/_index.po
+++ b/documentation/content/ru/articles/contributors/_index.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
 "POT-Creation-Date: 2024-09-14 14:59-0300\n"
-"PO-Revision-Date: 2025-08-11 04:45+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/articlescontributors_index/ru/>\n"
@@ -641,7 +641,7 @@ msgstr ""
 "терпеливо поддерживала {joerg}, который часто отдавал предпочтение работе с "
 "FreeBSD вместо оплачиваемой работы и использовал их (довольно дорогое) "
 "интернет-подключение EUnet, когда его личное соединение становилось слишком "
-"медленным или ненадежным для работы."
+"медленным или ненадёжным для работы."
 
 #. type: Plain text
 #: documentation/content/en/articles/contributors/_index.adoc:213
