--- a/documentation/content/ru/articles/contributors/contrib-develinmemoriam.adoc
+++ b/documentation/content/ru/articles/contributors/contrib-develinmemoriam.adoc
@@ -19,7 +19,7 @@
 +
 Вне FreeBSD, у Ханса были увлечения музыкой и математикой. Он активно участвовал в жизни своей церкви и помогал команде, занимающейся звуком. Он был любящим и заботливым дядей для своих племянников и племянниц. Он любил животных, особенно своего кота Пумбу.
 +
-Более полная версия воспоминаний доступна по ссылке: link:https://forums.freebsd.org/threads/in-memoriam-hans-petter-william-sirevag-selasky.89697/[на этой странице форума FreeBSD].
+Более полная версия воспоминаний доступна по ссылке link:https://forums.freebsd.org/threads/in-memoriam-hans-petter-william-sirevag-selasky.89697/[на этой странице форума FreeBSD].
 * Брюс Д. Эванс (1991 - 2019; RIP 2019)
 +
 Брюс был гигантом программирования, для которого FreeBSD стал домом.
