--- a/documentation/content/ru/articles/cups/_index.po
+++ b/documentation/content/ru/articles/cups/_index.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-09-28 22:56+0300\n"
-"PO-Revision-Date: 2025-08-15 04:45+0000\n"
+"POT-Creation-Date: 2023-05-21 14:43-0300\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/articlescups_index/ru/>\n"
@@ -18,7 +18,7 @@ msgstr ""
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Generator: Weblate 4.17\n"
 
-#. type: Yaml Front Matter Hash Value: description
+#. type: YAML Front Matter: description
 #: documentation/content/en/articles/cups/_index.adoc:1
 #, no-wrap
 msgid "How to install and use CUPS on FreeBSD"
@@ -80,8 +80,8 @@ msgid ""
 "accessing printers in mixed environments of FreeBSD, Linux(R), Mac OS(R) X, "
 "or Windows(R)."
 msgstr ""
-"Универсальная Система Печати UNIX использует протокол межсетевой печати "
-"(Internet Printing Protocol, IPP) как основу для управления заданиями на "
+"Универсальная Система Печати UNIX использует протокол межсетевой печати ("
+"Internet Printing Protocol, IPP) как основу для управления заданиями на "
 "печать и очередями. Также частично поддерживаются следующие протоколы: LPD, "
 "SMB и AppSocket (также известный как JetDirect). CUPS дает возможность "
 "обзора сетевых принтеров и использования опций, базирующихся на ПостСкрипт "
@@ -128,7 +128,7 @@ msgstr ""
 "Другие необязательные, но рекомендуемые к установке пакеты это package:print/"
 "gutenprint-cups[] и package:print/hplip[], каждый из которых добавляет "
 "драйвера и утилиты для разнообразных принтеров. После установки файлы "
-"конфигурации CUPS могут быть найдены в директории [.filename]#/usr/local/etc/"
+"конфигурации CUPS могут быть найдены в каталоге [.filename]#/usr/local/etc/"
 "cups#."
 
 #. type: Title ==
@@ -212,13 +212,13 @@ msgstr ""
 #: documentation/content/en/articles/cups/_index.adoc:109
 msgid ""
 "To enable CUPS printing under certain Microsoft(R) Windows(R) clients, the "
-"line below should be uncommented in [.filename]#/usr/local/etc/cups/"
-"mime.types# and [.filename]#/usr/local/etc/cups/mime.convs#:"
+"line below should be uncommented in [.filename]#/usr/local/etc/cups/mime."
+"types# and [.filename]#/usr/local/etc/cups/mime.convs#:"
 msgstr ""
 "Для того, чтобы печать CUPS стала доступна для некоторых Microsoft(R) "
-"Windows(R) клиентов, необходимо раскомментировать следующую запись в "
-"[.filename]#/usr/local/etc/cups/mime.types# и [.filename]#/usr/local/etc/"
-"cups/mime.convs#:"
+"Windows(R) клиентов, необходимо раскомментировать следующую запись в [."
+"filename]#/usr/local/etc/cups/mime.types# и [.filename]#/usr/local/etc/cups/"
+"mime.convs#:"
 
 #. type: delimited block . 4
 #: documentation/content/en/articles/cups/_index.adoc:113
@@ -285,14 +285,14 @@ msgid ""
 "to the printers and print jobs."
 msgstr ""
 "Основным способом управления и администрирования сервера CUPS является веб-"
-"интерфейс, на который можно попасть запустив веб-браузер и набрав http://"
-"localhost:631[http://localhost:631] в его адресной строке. Если сервер CUPS "
-"находится на другой машине в сети, замените `localhost` на IP адрес сервера. "
-"Веб-интерфейс CUPS достаточно очевиден, там есть разделы для управления "
-"принтерами и заданиями на печать, авторизацией пользователей и т.п. Кроме "
-"того, в правой части страницы администрирования есть несколько флажков "
-"(check-box), дающих удобный доступ к часто меняемым установкам, таким как "
-"разрешение публичного доступа к подключенным к системе принтерам, "
+"интерфейс, на который можно попасть запустив веб-браузер и набрав "
+"http://localhost:631[http://localhost:631] в его адресной строке. Если "
+"сервер CUPS находится на другой машине в сети, замените `localhost` на IP "
+"адрес сервера. Веб-интерфейс CUPS достаточно очевиден, там есть разделы для "
+"управления принтерами и заданиями на печать, авторизацией пользователей и "
+"т.п. Кроме того, в правой части страницы администрирования есть несколько "
+"флажков (check-box), дающих удобный доступ к часто меняемым установкам, "
+"таким как разрешение публичного доступа к подключенным к системе принтерам, "
 "предоставление удаленного управления сервером CUPS, изменение уровня доступа "
 "пользователей к принтерам и их заданиям на печать."
 
@@ -317,7 +317,7 @@ msgstr ""
 "интерфейса. В случае если были установлены порты или пакеты package:print/"
 "gutenprint-cups[] или package:print/hplip[], как указывалось выше, "
 "дополнительные драйвера печати будут доступны на последующих страницах, что "
-"может обеспечить большую надежность и расширенные возможности."
+"может обеспечить большую надёжность и расширенные возможности."
 
 #. type: Title ==
 #: documentation/content/en/articles/cups/_index.adoc:139
@@ -364,12 +364,12 @@ msgstr ""
 "системы печати на клиенте, CUPS-принтеры, присутствующие в сети, чаще всего "
 "автоматически находятся менеджерами принтеров разных графических оболочек, "
 "таких как GNOME или KDE. В качестве альтернативы, вы можете воспользоваться "
-"веб-интерфейсом CUPS на клиентской машине по адресу http://"
-"localhost:631[http://localhost:631] и на странице администрирования выбрать "
-"\"Add Printer\". Когда перед вами предстанет выпадающий список \"Device\", "
-"просто выберите сетевой CUPS принтер, если он был обнаружен автоматически, "
-"или выберите `ipp` или `http` и введите IPP или HTTP адрес (URI) сетевого "
-"CUPS принтера:"
+"веб-интерфейсом CUPS на клиентской машине по адресу "
+"http://localhost:631[http://localhost:631] и на странице администрирования "
+"выбрать \"Add Printer\". Когда перед вами предстанет выпадающий список "
+"\"Device\", просто выберите сетевой CUPS принтер, если он был обнаружен "
+"автоматически, или выберите `ipp` или `http` и введите IPP или HTTP адрес "
+"(URI) сетевого CUPS принтера:"
 
 #. type: delimited block . 4
 #: documentation/content/en/articles/cups/_index.adoc:155
@@ -388,8 +388,8 @@ msgstr "http://server-name-or-ip:631/printers/printername\n"
 #: documentation/content/en/articles/cups/_index.adoc:163
 msgid ""
 "If the CUPS clients have difficulty finding other CUPS printers shared "
-"across the network, sometimes it is helpful to add or create a file "
-"[.filename]#/usr/local/etc/cups/client.conf# with a single entry as follows:"
+"across the network, sometimes it is helpful to add or create a file [."
+"filename]#/usr/local/etc/cups/client.conf# with a single entry as follows:"
 msgstr ""
 "Если CUPS клиент не находит в сети принтеры, доступные через сервер CUPS, то "
 "иногда помогает создание или изменение файла [.filename]#/usr/local/etc/cups/"
@@ -463,11 +463,11 @@ msgid ""
 "seem to be working, another fix might be to manually backup the main CUPS "
 "configuration file located at [.filename]#/usr/local/etc/cups/cupsd.conf# "
 "and edit the various configuration options and try different combinations of "
-"configuration options.  One sample [.filename]#/usr/local/etc/cups/"
-"cupsd.conf# to test is listed below.  Please note that this sample "
-"[.filename]#cupsd.conf# sacrifices security for easier configuration; once "
-"the administrator successfully connects to the CUPS server and configures "
-"the clients, it is advisable to revisit this configuration file and begin "
+"configuration options.  One sample [.filename]#/usr/local/etc/cups/cupsd."
+"conf# to test is listed below.  Please note that this sample [."
+"filename]#cupsd.conf# sacrifices security for easier configuration; once the "
+"administrator successfully connects to the CUPS server and configures the "
+"clients, it is advisable to revisit this configuration file and begin "
 "locking down access."
 msgstr ""
 "Проблемы c CUPS часто возникают из-за неверных прав доступа. Сначала дважды "
@@ -480,11 +480,11 @@ msgstr ""
 "local/etc/cups/cupsd.conf# и редактирование разных опций конфигурации с "
 "подбором их комбинаций. Ниже приведено содержимое тестового файла "
 "конфигурации [.filename]#/usr/local/etc/cups/cupsd.conf#. Пожалуйста, "
-"обратите внимание на то, что безопасность в этом примере "
-"[.filename]#cupsd.conf# была пожертвована в угоду простоте настройки; как "
-"только администратор успешно подсоединится к серверу CUPS и сконфигурирует "
-"клиентов, рекомендуется пересмотреть данную конфигурацию и добавить "
-"разграничение доступа."
+"обратите внимание на то, что безопасность в этом примере [.filename]#cupsd."
+"conf# была пожертвована в угоду простоте настройки; как только администратор "
+"успешно подсоединится к серверу CUPS и сконфигурирует клиентов, "
+"рекомендуется пересмотреть данную конфигурацию и добавить разграничение "
+"доступа."
 
 #. type: delimited block . 4
 #: documentation/content/en/articles/cups/_index.adoc:202
@@ -630,9 +630,12 @@ msgstr ""
 "# Set the default printer/job policies...\n"
 "<Policy default>\n"
 "  # Job-related operations must be done by the owner or an administrator...\n"
-"  <Limit Send-Document Send-URI Hold-Job Release-Job Restart-Job Purge-Jobs \\\n"
-"Set-Job-Attributes Create-Job-Subscription Renew-Subscription Cancel-Subscription \\\n"
-"Get-Notifications Reprocess-Job Cancel-Current-Job Suspend-Current-Job Resume-Job \\\n"
+"  <Limit Send-Document Send-URI Hold-Job Release-Job Restart-Job Purge-Jobs "
+"\\\n"
+"Set-Job-Attributes Create-Job-Subscription Renew-Subscription Cancel-"
+"Subscription \\\n"
+"Get-Notifications Reprocess-Job Cancel-Current-Job Suspend-Current-Job "
+"Resume-Job \\\n"
 "CUPS-Move-Job>\n"
 "    Require user @OWNER @SYSTEM\n"
 "    Order deny,allow\n"
@@ -653,11 +656,16 @@ msgid ""
 "    Order deny,allow\n"
 "  </Limit>\n"
 msgstr ""
-"  # All administration operations require an administrator to authenticate...\n"
-"  <Limit Pause-Printer Resume-Printer Set-Printer-Attributes Enable-Printer \\\n"
-"Disable-Printer Pause-Printer-After-Current-Job Hold-New-Jobs Release-Held-New-Jobs \\\n"
-"Deactivate-Printer Activate-Printer Restart-Printer Shutdown-Printer Startup-Printer \\\n"
-"Promote-Job Schedule-Job-After CUPS-Add-Printer CUPS-Delete-Printer CUPS-Add-Class \\\n"
+"  # All administration operations require an administrator to authenticate..."
+"\n"
+"  <Limit Pause-Printer Resume-Printer Set-Printer-Attributes Enable-Printer "
+"\\\n"
+"Disable-Printer Pause-Printer-After-Current-Job Hold-New-Jobs Release-Held-"
+"New-Jobs \\\n"
+"Deactivate-Printer Activate-Printer Restart-Printer Shutdown-Printer Startup-"
+"Printer \\\n"
+"Promote-Job Schedule-Job-After CUPS-Add-Printer CUPS-Delete-Printer CUPS-Add-"
+"Class \\\n"
 "CUPS-Delete-Class CUPS-Accept-Jobs CUPS-Reject-Jobs CUPS-Set-Default>\n"
 "    AuthType Basic\n"
 "    Require user @SYSTEM\n"
