--- a/documentation/content/ru/articles/filtering-bridges/_index.adoc
+++ b/documentation/content/ru/articles/filtering-bridges/_index.adoc
@@ -84,7 +84,7 @@ options IPFIREWALL_VERBOSE
 
 Первая строка компилирует поддержку моста, вторая — межсетевой экран, а третья — функции журналирования межсетевого экрана.
 
-Теперь необходимо собрать и установить новое ядро. Подробные инструкции можно найти в разделе extref:{handbook}kernelconfig[Сборка и установка пользовательского ядра, kernelconfig-building] руководства FreeBSD.
+Теперь необходимо собрать и установить новое ядро. Подробные инструкции можно найти в разделе extref:{handbook}kernelconfig[Сборка и установка пользовательского ядра, kernelconfig-building] Руководства FreeBSD.
 
 [[filtering-bridges-modules]]
 === Загрузка модулей
