--- a/documentation/content/ru/articles/freebsd-questions/_index.po
+++ b/documentation/content/ru/articles/freebsd-questions/_index.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2023-09-09 18:13-0300\n"
-"PO-Revision-Date: 2025-10-02 04:45+0000\n"
+"POT-Creation-Date: 2025-11-08 16:17+0000\n"
+"PO-Revision-Date: 2025-11-09 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/articlesfreebsd-questions_index/ru/>\n"
@@ -23,8 +23,7 @@ msgstr ""
 #: documentation/content/en/articles/freebsd-questions/_index.adoc:11
 #, no-wrap
 msgid "How to get Best Results from the FreeBSD-questions Mailing List"
-msgstr ""
-"Как работать со списком рассылки FreeBSD-questions c максимальной отдачей"
+msgstr "Как работать со списком рассылки FreeBSD-questions c максимальной отдачей"
 
 #. type: Plain text
 #: documentation/content/en/articles/freebsd-questions/_index.adoc:44
@@ -89,8 +88,8 @@ msgstr ""
 "других людей. Правильным термином для обозначения такой деятельности "
 "является \"кракер\", однако популярная пресса этого еще не поняла. Хакеры "
 "FreeBSD нарушением защиты не занимаются. Более полное описание хакеров "
-"находится в руководстве Эрика Рэймонда (Eric Raymond) http://www.catb.org/~"
-"esr/faqs/hacker-howto.html[Как стать хакером]"
+"находится в руководстве Эрика Рэймонда (Eric Raymond) http://www.catb.org/"
+"~esr/faqs/hacker-howto.html[Как стать хакером]"
 
 #. type: Plain text
 #: documentation/content/en/articles/freebsd-questions/_index.adoc:68
@@ -175,13 +174,13 @@ msgstr "Как отписаться от FreeBSD-questions"
 msgid ""
 "Point your WWW browser to the {freebsd-questions}.  In the section titled "
 "\"Subscribe or unsubscribe online\" fill in the \"Your email address\" field "
-"and hit \"Unsubscribe\".  Or send an email to freebsd-"
-"questions+unsubscribe@freebsd.org."
+"and hit \"Unsubscribe\".  Or send an email to freebsd-questions"
+"+unsubscribe@freebsd.org."
 msgstr ""
 "Направьте ваш браузер на {freebsd-questions}. В разделе \"Subscribe or "
 "unsubscribe online\" заполните поле \"Your email address\" и нажмите "
-"\"Unsubscribe\". Или отправьте письмо на freebsd-"
-"questions+unsubscribe@freebsd.org."
+"\"Unsubscribe\". Или отправьте письмо на freebsd-questions"
+"+unsubscribe@freebsd.org."
 
 #. type: Plain text
 #: documentation/content/en/articles/freebsd-questions/_index.adoc:92
@@ -256,9 +255,9 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/articles/freebsd-questions/_index.adoc:106
 msgid ""
-"There are also a number of other extref:{handbook}[specialized mailing "
-"lists, eresources-mail], which caters to more specific interests.  The "
-"criteria above still apply, and it is in your interest to stick to them, "
+"There are also a number of other extref:{handbook}eresources[specialized "
+"mailing lists, eresources-mail], which caters to more specific interests.  "
+"The criteria above still apply, and it is in your interest to stick to them, "
 "since you are more likely to get good results that way."
 msgstr ""
 "Имеется также некоторое количество других extref:{handbook}eresources["
@@ -307,9 +306,9 @@ msgid ""
 "{faq}[FAQ]."
 msgstr ""
 "Прочтите страницы справочника и документацию FreeBSD (установлена в [."
-"filename]#/usr/doc# или доступна через WWW на http://www.FreeBSD."
-"org[http://www.FreeBSD.org]), особенно extref:{handbook}[Руководство "
-"пользователя] и extref:{faq}[FAQ]."
+"filename]#/usr/doc# или доступна через WWW на http://www.FreeBSD.org[http://"
+"www.FreeBSD.org]), особенно extref:{handbook}[Руководство пользователя] и "
+"extref:{faq}[FAQ]."
 
 #. type: Plain text
 #: documentation/content/en/articles/freebsd-questions/_index.adoc:114
@@ -324,8 +323,8 @@ msgstr ""
 "Просмотрите и/или выполните поиск по архивам списка рассылки, чтобы узнать, "
 "задавался ли ваш вопрос или подобный ему в списке (и возможно, был на него "
 "ответ). Вы можете просматривать и/или искать архивы списка рассылки по "
-"адресам https://www.FreeBSD.org/mail[https://www.FreeBSD.org/mail] и "
-"https://www.FreeBSD.org/search/#mailinglists[https://www.FreeBSD.org/search/"
+"адресам https://www.FreeBSD.org/mail[https://www.FreeBSD.org/mail] и https://"
+"www.FreeBSD.org/search/#mailinglists[https://www.FreeBSD.org/search/"
 "#mailinglists] соответственно."
 
 #. type: Plain text
@@ -334,8 +333,8 @@ msgid ""
 "Use a search engine such as http://www.google.com[Google] or http://www."
 "yahoo.com[Yahoo] to find answers to your question."
 msgstr ""
-"Используйте поисковик, например, http://www.google.com[Google] или http://www"
-".yahoo.com[Yahoo] для поиска ответов на ваш вопрос. Google имеет даже "
+"Используйте поисковик, например, http://www.google.com[Google] или http://"
+"www.yahoo.com[Yahoo] для поиска ответов на ваш вопрос. Google имеет даже "
 "http://www.google.com/bsd[BSD ориентированный поисковой интерфейс]."
 
 #. type: Title ==
@@ -530,8 +529,8 @@ msgid ""
 "dmesg[8] command can frequently be very useful, since it tells not just what "
 "hardware you are running, but what version of FreeBSD as well."
 msgstr ""
-"Здесь вам стоит подумать и принять решение, конечно, но вывод команды "
-"man:dmesg[8] зачастую может оказаться очень полезным, так как он говорит не "
+"Здесь вам стоит подумать и принять решение, конечно, но вывод команды man:"
+"dmesg[8] зачастую может оказаться очень полезным, так как он говорит не "
 "только об оборудовании, с которым вы работаете, но также и о версии FreeBSD."
 
 #. type: Plain text
@@ -541,8 +540,8 @@ msgid ""
 "example) \"I get the error message 'No route to host'\"."
 msgstr ""
 "Если выдаются сообщения об ошибках, недостаточно написать \"I get error "
-"messages\", напишите (например) \"I get the error message 'No route to host'"
-"\"."
+"messages\", напишите (например) \"I get the error message 'No route to "
+"host'\"."
 
 #. type: Plain text
 #: documentation/content/en/articles/freebsd-questions/_index.adoc:145
@@ -550,8 +549,8 @@ msgid ""
 "If your system panics, do not say \"My system panicked\", say (for example) "
 "\"my system panicked with the message 'free vnode isn't'\"."
 msgstr ""
-"Если ваша система завершает работу аварийно, не пишите \"My system panicked\""
-", напишите (к примеру) \"my system panicked with the message 'free vnode "
+"Если ваша система завершает работу аварийно, не пишите \"My system panicked"
+"\", напишите (к примеру) \"my system panicked with the message 'free vnode "
 "isn't'\"."
 
 #. type: Plain text
@@ -638,8 +637,8 @@ msgid ""
 "(yes, it is the same one in each case).  You choose which of these two "
 "questions you would be more prepared to answer:"
 msgstr ""
-"Подводя итог, давайте предположим, что вы знаете ответ на следующий вопрос ("
-"да, это один и тот же вопрос). Выберите, на какой вопрос вы в большей "
+"Подводя итог, давайте предположим, что вы знаете ответ на следующий вопрос "
+"(да, это один и тот же вопрос). Выберите, на какой вопрос вы в большей "
 "степени готовы ответить:"
 
 #. type: Block title
@@ -687,8 +686,7 @@ msgid ""
 "fine, but when I try to reboot the system, I get the message\n"
 "Missing Operating System.\n"
 msgstr ""
-"I've just got the FreeBSD 2.1.5 CDROM from Walnut Creek, and I'm having a "
-"lot\n"
+"I've just got the FreeBSD 2.1.5 CDROM from Walnut Creek, and I'm having a lot\n"
 "of difficulty installing it. I have a 66 MHz 486 with 16 MB of\n"
 "memory and an Adaptec 1540A SCSI board, a 1.2GB Quantum Fireball\n"
 "disk and a Toshiba 3501XA CDROM drive. The installation works just\n"
@@ -913,9 +911,9 @@ msgstr ""
 "Если спрашивающий не следует соглашениям по форматированию текста (слишком "
 "длинные строки, неподходящая строка темы), __пожалуйста__, исправьте эти "
 "ошибки. В случае некорректной строки темы письма (типа \"HELP!!??\") "
-"измените её, например, так: \"Re: Difficulties with sync PPP (was: HELP!!??)"
-"\". В таком случае у других людей, пытающихся отследить обсуждение, будет "
-"меньше проблем."
+"измените её, например, так: \"Re: Difficulties with sync PPP (was: "
+"HELP!!??)\". В таком случае у других людей, пытающихся отследить обсуждение, "
+"будет меньше проблем."
 
 #. type: delimited block = 4
 #: documentation/content/en/articles/freebsd-questions/_index.adoc:221
