--- a/documentation/content/ru/articles/freebsd-releng/_index.po
+++ b/documentation/content/ru/articles/freebsd-releng/_index.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
 "POT-Creation-Date: 2024-12-29 08:30-0500\n"
-"PO-Revision-Date: 2025-08-08 04:45+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/articlesfreebsd-releng_index/ru/>\n"
@@ -1842,8 +1842,7 @@ msgstr ""
 "filename]#main.conf# в случае скриптов сборки, упомянутых выше, это "
 "происходит автоматически после завершения сборки, создавая структуру "
 "каталогов в [.filename]#${DESTDIR}/R/ftp-stage# с путями, соответствующими "
-"ожидаемым на `ftp-master`. Это эквивалентно выполнению следующего в "
-"директории:"
+"ожидаемым на `ftp-master`. Это эквивалентно выполнению следующего в каталоге:"
 
 #. type: delimited block . 4
 #: documentation/content/en/articles/freebsd-releng/_index.adoc:682
@@ -1861,7 +1860,7 @@ msgid ""
 "respectively."
 msgstr ""
 "После сборки каждой архитектуры скрипт [.filename]#thermite.sh# выполнит "
-"синхронизацию [.filename]#${DESTDIR}/R/ftp-stage# с билда в директории [."
+"синхронизацию [.filename]#${DESTDIR}/R/ftp-stage# с билда в каталоге [."
 "filename]#/snap/ftp/snapshots# или [.filename]#/snap/ftp/releases# на хосте "
 "сборки, соответственно."
 
