--- a/documentation/content/ru/articles/freebsd-src-lsp/_index.adoc
+++ b/documentation/content/ru/articles/freebsd-src-lsp/_index.adoc
@@ -246,7 +246,7 @@ link:https://github.com/rizsotto/scan-build[rizsotto/scan-build] можно ис
 # intercept-build --append make buildworld buildkernel -j`sysctl -n hw.ncpu`
 ....
 
-Флаг `--append` указывает `intercept-build` прочитать существующую базу данных компиляции (если она существует) и добавить результаты в базу данных. Записи с дублирующимися ключами команд объединяются. Сгенерированная база данных компиляции по умолчанию сохраняется в текущей рабочей директории как [.filename]#compile_commands.json#.
+Флаг `--append` указывает `intercept-build` прочитать существующую базу данных компиляции (если она существует) и добавить результаты в базу данных. Записи с дублирующимися ключами команд объединяются. Сгенерированная база данных компиляции по умолчанию сохраняется в текущем рабочем каталоге как [.filename]#compile_commands.json#.
 
 [[generators-bear]]
 ==== Использование devel/bear
@@ -260,7 +260,7 @@ link:https://github.com/rizsotto/scan-build[rizsotto/scan-build] можно ис
 # bear --append -- make buildworld buildkernel -j`sysctl -n hw.ncpu`
 ....
 
-Флаг `--append` указывает `bear` прочитать существующую базу данных компиляции, если она есть, и добавить результаты в неё. Записи с дублирующимися ключами команд объединяются. Сгенерированная база данных компиляции по умолчанию сохраняется в текущей рабочей директории как [.filename]#compile_commands.json#.
+Флаг `--append` указывает `bear` прочитать существующую базу данных компиляции, если она есть, и добавить результаты в неё. Записи с дублирующимися ключами команд объединяются. Сгенерированная база данных компиляции по умолчанию сохраняется в текущем рабочем каталоге как [.filename]#compile_commands.json#.
 
 [[final]]
 == Последние шаги
