--- a/documentation/content/ru/articles/freebsd-src-lsp/_index.po
+++ b/documentation/content/ru/articles/freebsd-src-lsp/_index.po
@@ -6,8 +6,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-09-25 18:20+0300\n"
-"PO-Revision-Date: 2025-08-02 04:45+0000\n"
+"POT-Creation-Date: 2024-01-17 20:35-0300\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/articlesfreebsd-src-lsp_index/ru/>\n"
@@ -19,18 +19,23 @@ msgstr ""
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Generator: Weblate 4.17\n"
 
-#. type: Yaml Front Matter Hash Value: description
+#. type: YAML Front Matter: description
 #: documentation/content/en/articles/freebsd-src-lsp/_index.adoc:1
 #, no-wrap
 msgid "Use Language Servers for development in the FreeBSD src tree to get precise go-to-definition and completion results."
-msgstr "Используйте языковые серверы для разработки в дереве исходного кода FreeBSD, чтобы получать точные результаты при переходах к определениям функций и переменных и при автодополнениях."
+msgstr ""
+"Используйте языковые серверы для разработки в дереве исходного кода FreeBSD, "
+"чтобы получать точные результаты при переходах к определениям функций и "
+"переменных и при автодополнениях."
 
 #. type: Title =
 #: documentation/content/en/articles/freebsd-src-lsp/_index.adoc:1
 #: documentation/content/en/articles/freebsd-src-lsp/_index.adoc:13
 #, no-wrap
 msgid "Use Language Servers for Development in the FreeBSD Src Tree"
-msgstr "Использование разработчиками языковых серверов в дереве исходного кода FreeBSD"
+msgstr ""
+"Использование разработчиками языковых серверов в дереве исходного кода "
+"FreeBSD"
 
 #. type: Title ==
 #: documentation/content/en/articles/freebsd-src-lsp/_index.adoc:47
@@ -199,8 +204,8 @@ msgid ""
 "lsp[prabirshrestha/vim-lsp]."
 msgstr ""
 "Встроенный менеджер плагинов используется для обоих редакторов в этом "
-"примере. Плагин LSP-клиента, который используется, — это link:https://"
-"github.com/prabirshrestha/vim-lsp[prabirshrestha/vim-lsp]."
+"примере. Плагин LSP-клиента, который используется, — это link:https://github."
+"com/prabirshrestha/vim-lsp[prabirshrestha/vim-lsp]."
 
 #. type: Plain text
 #: documentation/content/en/articles/freebsd-src-lsp/_index.adoc:98
@@ -215,7 +220,8 @@ msgid ""
 "# git clone https://github.com/prabirshrestha/vim-lsp ~/.config/nvim/pack/lsp/start/vim-lsp\n"
 msgstr ""
 "# mkdir -p ~/.config/nvim/pack/lsp/start\n"
-"# git clone https://github.com/prabirshrestha/vim-lsp ~/.config/nvim/pack/lsp/start/vim-lsp\n"
+"# git clone https://github.com/prabirshrestha/vim-lsp ~/.config/nvim/pack/"
+"lsp/start/vim-lsp\n"
 
 #. type: Plain text
 #: documentation/content/en/articles/freebsd-src-lsp/_index.adoc:106
@@ -230,18 +236,19 @@ msgid ""
 "# git clone https://github.com/prabirshrestha/vim-lsp ~/.vim/pack/lsp/start/vim-lsp\n"
 msgstr ""
 "# mkdir -p ~/.vim/pack/lsp/start\n"
-"# git clone https://github.com/prabirshrestha/vim-lsp ~/.vim/pack/lsp/start/vim-lsp\n"
+"# git clone https://github.com/prabirshrestha/vim-lsp ~/.vim/pack/lsp/start/"
+"vim-lsp\n"
 
 #. type: Plain text
 #: documentation/content/en/articles/freebsd-src-lsp/_index.adoc:114
 msgid ""
 "To enable the LSP client plugin in the editor, add the following snippet "
-"into [.filepath]#~/.config/nvim/init.vim# when using Neovim, or "
-"[.filepath]#~/.vim/vimrc# when using Vim:"
+"into [.filepath]#~/.config/nvim/init.vim# when using Neovim, or [."
+"filepath]#~/.vim/vimrc# when using Vim:"
 msgstr ""
 "Чтобы включить плагин LSP-клиента в редакторе, добавьте следующий фрагмент в "
-"[.filepath]#~/.config/nvim/init.vim# при использовании Neovim или в "
-"[.filepath]#~/.vim/vimrc# при использовании Vim:"
+"[.filepath]#~/.config/nvim/init.vim# при использовании Neovim или в [."
+"filepath]#~/.vim/vimrc# при использовании Vim:"
 
 #. type: Block title
 #: documentation/content/en/articles/freebsd-src-lsp/_index.adoc:115
@@ -294,7 +301,8 @@ msgid ""
 msgstr ""
 "au User lsp_setup call lsp#register_server({\n"
 "    \\ 'name': 'clangd',\n"
-"    \\ 'cmd': {server_info->['clangd15', '--background-index', '--header-insertion=never']},\n"
+"    \\ 'cmd': {server_info->['clangd15', '--background-index', '--header-"
+"insertion=never']},\n"
 "    \\ 'allowlist': ['c', 'cpp', 'objc'],\n"
 "    \\ 'initialization_options': {},\n"
 "    \\ })\n"
@@ -313,9 +321,9 @@ msgstr ""
 msgid ""
 "Please refer to link:https://github.com/prabirshrestha/vim-lsp/blob/master/"
 "README.md#registering-servers[] to learn about setting up key bindings and "
-"code completion.  The official site of clangd is link:https://"
-"clangd.llvm.org[], and the repository link of ccls is link:https://"
-"github.com/MaskRay/ccls/[]."
+"code completion.  The official site of clangd is link:https://clangd.llvm."
+"org[], and the repository link of ccls is link:https://github.com/MaskRay/"
+"ccls/[]."
 msgstr ""
 "Обратитесь к link:https://github.com/prabirshrestha/vim-lsp/blob/master/"
 "README.md#registering-servers[], чтобы узнать о настройке сочетаний клавиш и "
@@ -327,12 +335,12 @@ msgstr ""
 #: documentation/content/en/articles/freebsd-src-lsp/_index.adoc:147
 msgid ""
 "Below are the reference settings of keybindings and code completions.  Put "
-"the following snippet into [.filepath]#~/.config/nvim/init.vim#, or "
-"[.filepath]#~/.vim/vimrc# for Vim users to use it:"
+"the following snippet into [.filepath]#~/.config/nvim/init.vim#, or [."
+"filepath]#~/.vim/vimrc# for Vim users to use it:"
 msgstr ""
 "Ниже приведены эталонные настройки сочетаний клавиш и автодополнения кода.  "
-"Поместите следующий фрагмент в [.filepath]#~/.config/nvim/init.vim# или "
-"[.filepath]#~/.vim/vimrc# для пользователей Vim, чтобы использовать его:"
+"Поместите следующий фрагмент в [.filepath]#~/.config/nvim/init.vim# или [."
+"filepath]#~/.vim/vimrc# для пользователей Vim, чтобы использовать его:"
 
 #. type: delimited block . 4
 #: documentation/content/en/articles/freebsd-src-lsp/_index.adoc:154
@@ -419,14 +427,14 @@ msgid ""
 "Then, press `Ctrl+Shift+P` to show the editor commands palette.  Enter "
 "`Preferences: Open Settings (JSON)` into the palette and hit `Enter` to open "
 "[.filepath]#settings.json#.  Depending on the language server "
-"implementations, put one of the following JSON key/value pairs in "
-"[.filepath]#settings.json#:"
+"implementations, put one of the following JSON key/value pairs in [."
+"filepath]#settings.json#:"
 msgstr ""
 "Затем нажмите `Ctrl+Shift+P`, чтобы открыть палитру команд редактора. "
 "Введите `Preferences: Open Settings (JSON)` в палитру и нажмите `Enter`, "
 "чтобы открыть [.filepath]#settings.json#. В зависимости от реализации "
-"языкового сервера, добавьте одну из следующих пар ключ/значение JSON в "
-"[.filepath]#settings.json#:"
+"языкового сервера, добавьте одну из следующих пар ключ/значение JSON в [."
+"filepath]#settings.json#:"
 
 #. type: delimited block . 4
 #: documentation/content/en/articles/freebsd-src-lsp/_index.adoc:201
@@ -494,9 +502,8 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/articles/freebsd-src-lsp/_index.adoc:223
 msgid ""
-"Please refer to link:https://clang.llvm.org/docs/"
-"JSONCompilationDatabase.html#format[] for details on the format of the "
-"compilation database file."
+"Please refer to link:https://clang.llvm.org/docs/JSONCompilationDatabase."
+"html#format[] for details on the format of the compilation database file."
 msgstr ""
 "Пожалуйста, обратитесь к link:https://clang.llvm.org/docs/"
 "JSONCompilationDatabase.html#format[] для получения подробностей о формате "
@@ -542,7 +549,8 @@ msgstr ""
 #: documentation/content/en/articles/freebsd-src-lsp/_index.adoc:241
 #, no-wrap
 msgid "# git clone https://github.com/llvm/llvm-project /path/to/llvm-project\n"
-msgstr "# git clone https://github.com/llvm/llvm-project /path/to/llvm-project\n"
+msgstr ""
+"# git clone https://github.com/llvm/llvm-project /path/to/llvm-project\n"
 
 #. type: Plain text
 #: documentation/content/en/articles/freebsd-src-lsp/_index.adoc:244
@@ -557,7 +565,9 @@ msgstr ""
 #: documentation/content/en/articles/freebsd-src-lsp/_index.adoc:248
 #, no-wrap
 msgid "alias intercept-build='/path/to/llvm-project/clang/tools/scan-build-py/bin/intercept-build'\n"
-msgstr "alias intercept-build='/path/to/llvm-project/clang/tools/scan-build-py/bin/intercept-build'\n"
+msgstr ""
+"alias intercept-build='/path/to/llvm-project/clang/tools/scan-build-py/bin/"
+"intercept-build'\n"
 
 #. type: Plain text
 #: documentation/content/en/articles/freebsd-src-lsp/_index.adoc:254
@@ -565,8 +575,8 @@ msgid ""
 "link:https://github.com/rizsotto/scan-build[rizsotto/scan-build] can be used "
 "instead of LLVM's scan-build-py.  The LLVM's scan-build-py was rizsotto/scan-"
 "build merged into the LLVM tree.  This implementation can be installed by "
-"`pip install --user scan-build`.  The `intercept-build` script is in "
-"[.filename]#~/.local/bin# by default."
+"`pip install --user scan-build`.  The `intercept-build` script is in [."
+"filename]#~/.local/bin# by default."
 msgstr ""
 "link:https://github.com/rizsotto/scan-build[rizsotto/scan-build] можно "
 "использовать вместо LLVM's scan-build-py. LLVM's scan-build-py был объединён "
@@ -594,7 +604,9 @@ msgstr ""
 #: documentation/content/en/articles/freebsd-src-lsp/_index.adoc:262
 #, no-wrap
 msgid "# intercept-build --append make buildworld buildkernel -j`sysctl -n hw.ncpu`\n"
-msgstr "# intercept-build --append make buildworld buildkernel -j`sysctl -n hw.ncpu`\n"
+msgstr ""
+"# intercept-build --append make buildworld buildkernel -j`sysctl -n hw.ncpu`"
+"\n"
 
 #. type: Plain text
 #: documentation/content/en/articles/freebsd-src-lsp/_index.adoc:267
@@ -608,8 +620,8 @@ msgstr ""
 "Флаг `--append` указывает `intercept-build` прочитать существующую базу "
 "данных компиляции (если она существует) и добавить результаты в базу данных. "
 "Записи с дублирующимися ключами команд объединяются. Сгенерированная база "
-"данных компиляции по умолчанию сохраняется в текущей рабочей директории как "
-"[.filename]#compile_commands.json#."
+"данных компиляции по умолчанию сохраняется в текущем рабочем каталоге как [."
+"filename]#compile_commands.json#."
 
 #. type: Title ====
 #: documentation/content/en/articles/freebsd-src-lsp/_index.adoc:269
@@ -638,14 +650,14 @@ msgid ""
 "The `--append` flag tells `bear` to read an existing compilation database if "
 "it is present, and append the results to the database.  Entries with "
 "duplicated command keys are merged.  The generated compilation database by "
-"default is saved in the current working directory as "
-"[.filename]#compile_commands.json#."
+"default is saved in the current working directory as [."
+"filename]#compile_commands.json#."
 msgstr ""
 "Флаг `--append` указывает `bear` прочитать существующую базу данных "
 "компиляции, если она есть, и добавить результаты в неё. Записи с "
 "дублирующимися ключами команд объединяются. Сгенерированная база данных "
-"компиляции по умолчанию сохраняется в текущей рабочей директории как "
-"[.filename]#compile_commands.json#."
+"компиляции по умолчанию сохраняется в текущем рабочем каталоге как [."
+"filename]#compile_commands.json#."
 
 #. type: Title ==
 #: documentation/content/en/articles/freebsd-src-lsp/_index.adoc:285
