--- a/documentation/content/ru/articles/freebsd-status-report-process/_index.po
+++ b/documentation/content/ru/articles/freebsd-status-report-process/_index.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
 "POT-Creation-Date: 2025-05-01 19:56-0300\n"
-"PO-Revision-Date: 2025-10-29 04:45+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/articlesfreebsd-status-report-process_index/ru/>\n"
@@ -22,7 +22,7 @@ msgstr ""
 #: documentation/content/en/articles/freebsd-status-report-process/_index.adoc:1
 #, no-wrap
 msgid "Instructions for both writers and editors of status reports"
-msgstr "Инструкции для авторов и редакторов отчетов о состоянии"
+msgstr "Инструкции для авторов и редакторов отчётов о состоянии"
 
 #. type: Title =
 #: documentation/content/en/articles/freebsd-status-report-process/_index.adoc:1
@@ -44,9 +44,9 @@ msgid ""
 "augmented by special reports from Developer Summits.  As they are one of our "
 "most visible forms of communication, they are very important."
 msgstr ""
-"Отчеты о состоянии FreeBSD публикуются ежеквартально и предоставляют широкой "
+"Отчёты о состоянии FreeBSD публикуются ежеквартально и предоставляют широкой "
 "общественности обзор происходящего в проекте. Они часто дополняются "
-"специальными отчетами с встреч разработчиков. Поскольку это одна из самых "
+"специальными отчётами с встреч разработчиков. Поскольку это одна из самых "
 "заметных форм коммуникации, они очень важны."
 
 #. type: Plain text
@@ -74,7 +74,7 @@ msgid ""
 "This section provides some advice on writing status report entries.  "
 "Instructions on how to submit your entries are also given."
 msgstr ""
-"Этот раздел содержит рекомендации по написанию записей в отчетах о "
+"Этот раздел содержит рекомендации по написанию записей в отчётах о "
 "состоянии. Также приведены инструкции по отправке ваших записей."
 
 #. type: Plain text
@@ -108,7 +108,7 @@ msgid ""
 "people will read if they want to know a bit about what FreeBSD is.  Consider "
 "this example:"
 msgstr ""
-"Отчеты о состоянии имеют широкое распространение. Они часто становятся "
+"Отчёты о состоянии имеют широкое распространение. Они часто становятся "
 "одними из главных новостей на веб-сайте FreeBSD и являются одним из первых "
 "материалов, которые прочитают люди, желающие узнать немного о том, что такое "
 "FreeBSD. Рассмотрим следующий пример:"
@@ -163,7 +163,7 @@ msgid ""
 "_Status reports are not just about telling everyone that things were done, "
 "they also need to explain why they were done._"
 msgstr ""
-"_Отчеты о состоянии нужны не только для того, чтобы сообщать всем о "
+"_Отчёты о состоянии нужны не только для того, чтобы сообщать всем о "
 "выполненных задачах, но и для объяснения причин их выполнения._"
 
 #. type: Plain text
@@ -179,7 +179,7 @@ msgstr ""
 "карты Yoyodyne Frobnicator? Они широко распространены? Они используются в "
 "каком-то конкретном популярном устройстве? Они применяются в определенной "
 "нише, где FreeBSD имеет (или хотела бы иметь) присутствие? Это самые быстрые "
-"сетевые карты на планете? В отчетах о состоянии часто встречаются такие "
+"сетевые карты на планете? В отчётах о состоянии часто встречаются такие "
 "фразы:"
 
 #. type: delimited block . 4
@@ -227,11 +227,11 @@ msgid ""
 "finished (or, if \"finished\" does not really apply, when is it likely to be "
 "ready for wider use, for testing, for deployment in production, and so on)?"
 msgstr ""
-"Имейте в виду, что отчеты о состоянии — это не просто отчеты о состоянии "
-"проекта, это отчеты об изменении состояния проекта. Если проект "
+"Имейте в виду, что отчёты о состоянии — это не просто отчёты о состоянии "
+"проекта, это отчёты об изменении состояния проекта. Если проект "
 "продолжается, уделите пару предложений его представлению, но затем "
-"сосредоточьтесь в отчете на новой работе. Какой прогресс был достигнут с "
-"момента последнего отчета? Что осталось сделать? Когда он, вероятно, будет "
+"сосредоточьтесь в отчёте на новой работе. Какой прогресс был достигнут с "
+"момента последнего отчёта? Что осталось сделать? Когда он, вероятно, будет "
 "завершен (или, если \"завершение\" не совсем применимо, когда он будет готов "
 "для более широкого использования, тестирования, развертывания в производстве "
 "и так далее)?"
@@ -287,7 +287,7 @@ msgid ""
 "indicate who is focussing on each one."
 msgstr ""
 "Нужна ли помощь с чем-то? Есть ли задачи, которые могут выполнить другие "
-"люди? Существует два способа использования раздела открытых пунктов в отчете "
+"люди? Существует два способа использования раздела открытых пунктов в отчёте "
 "о состоянии: для запроса помощи или для быстрого обзора объема оставшейся "
 "работы. Если над проектом уже работает достаточное количество людей или он "
 "находится в таком состоянии, что добавление новых участников не ускорит его, "
@@ -313,7 +313,7 @@ msgstr "Представьте ваш отчёт"
 #. type: Plain text
 #: documentation/content/en/articles/freebsd-status-report-process/_index.adoc:118
 msgid "The following methods are available to submit your reports:"
-msgstr "Доступны следующие методы для отправки ваших отчетов:"
+msgstr "Доступны следующие методы для отправки ваших отчётов:"
 
 #. type: Plain text
 #: documentation/content/en/articles/freebsd-status-report-process/_index.adoc:121
@@ -345,7 +345,7 @@ msgstr ""
 #: documentation/content/en/articles/freebsd-status-report-process/_index.adoc:126
 msgid "send an email to status-submissions@FreeBSD.org including your report."
 msgstr ""
-"отправить письмо на адрес status-submissions@FreeBSD.org, приложив ваш отчет."
+"отправить письмо на адрес status-submissions@FreeBSD.org, приложив ваш отчёт."
 
 #. type: Plain text
 #: documentation/content/en/articles/freebsd-status-report-process/_index.adoc:128
@@ -371,7 +371,7 @@ msgstr "Этот раздел описывает, как работает про
 #: documentation/content/en/articles/freebsd-status-report-process/_index.adoc:138
 #, no-wrap
 msgid "Status reports main webpage"
-msgstr "Главная веб-страница отчетов о статусе"
+msgstr "Главная веб-страница отчётов о статусе"
 
 #. type: Table
 #: documentation/content/en/articles/freebsd-status-report-process/_index.adoc:140
@@ -384,8 +384,8 @@ msgstr "link:https://www.FreeBSD.org/status/[https://www.FreeBSD.org/status/]"
 #, no-wrap
 msgid "Status reports archived GitHub repository (was used for reports from 2017Q4 to 2022Q4):"
 msgstr ""
-"Отчеты о статусе архивированного репозитория GitHub (использовались для "
-"отчетов с 2017Q4 по 2022Q4):"
+"Отчёты о статусе архивированного репозитория GitHub (использовались для "
+"отчётов с 2017Q4 по 2022Q4):"
 
 #. type: Table
 #: documentation/content/en/articles/freebsd-status-report-process/_index.adoc:143
@@ -411,7 +411,7 @@ msgstr "link:mailto:status@FreeBSD.org[status@FreeBSD.org]"
 #: documentation/content/en/articles/freebsd-status-report-process/_index.adoc:147
 #, no-wrap
 msgid "Email address for reports submission"
-msgstr "Адрес электронной почты для отправки отчетов"
+msgstr "Адрес электронной почты для отправки отчётов"
 
 #. type: Table
 #: documentation/content/en/articles/freebsd-status-report-process/_index.adoc:149
@@ -424,7 +424,7 @@ msgstr ""
 #: documentation/content/en/articles/freebsd-status-report-process/_index.adoc:150
 #, no-wrap
 msgid "Mailing list for receiving calls for status reports"
-msgstr "Список рассылки для получения запросов на отчеты о состоянии"
+msgstr "Список рассылки для получения запросов на отчёты о состоянии"
 
 #. type: Table
 #: documentation/content/en/articles/freebsd-status-report-process/_index.adoc:152
@@ -465,13 +465,13 @@ msgid ""
 "can include waiting for late submissions.  Status reports publication is "
 "done during the same months as soon as the report are ready."
 msgstr ""
-"Отчеты всегда принимаются командой статуса, но основной процесс сбора "
+"Отчёты всегда принимаются командой статуса, но основной процесс сбора "
 "происходит в последний месяц каждого квартала, то есть в марте, июне, "
 "сентябре и декабре. В эти месяцы будут отправляться явные запросы на "
-"статусные отчеты. Месяцы январь, апрель, июль и октябрь посвящены сбору "
-"отчетов, представленных в предыдущем квартале; это может включать ожидание "
-"запоздавших отправлений. Публикация статусных отчетов происходит в те же "
-"месяцы, как только отчеты будут готовы."
+"статусные отчёты. Месяцы январь, апрель, июль и октябрь посвящены сбору "
+"отчётов, представленных в предыдущем квартале; это может включать ожидание "
+"запоздавших отправлений. Публикация статусных отчётов происходит в те же "
+"месяцы, как только отчёты будут готовы."
 
 #. type: Plain text
 #: documentation/content/en/articles/freebsd-status-report-process/_index.adoc:165
@@ -500,7 +500,7 @@ msgid ""
 "the 15th.  Note that this is not a complete freeze, and the status team may "
 "still be able to accept reviews then."
 msgstr ""
-"Проверка представленных отчетов людьми, не входящими в команду статуса, "
+"Проверка представленных отчётов людьми, не входящими в команду статуса, "
 "должна быть в основном завершена к середине января/апреля/июля/октября (срок "
 "для сторонней отложенной проверки). То есть, за исключением опечаток или "
 "других незначительных правок, команда статуса должна быть готова начать сбор "
@@ -536,7 +536,7 @@ msgstr "Четвертый квартал"
 #: documentation/content/en/articles/freebsd-status-report-process/_index.adoc:175
 #, no-wrap
 msgid "First call for reports"
-msgstr "Первый запрос отчетов"
+msgstr "Первый запрос отчётов"
 
 #. type: Table
 #: documentation/content/en/articles/freebsd-status-report-process/_index.adoc:176
@@ -716,12 +716,12 @@ msgstr "15 января"
 #: documentation/content/en/articles/freebsd-status-report-process/_index.adoc:211
 #, no-wrap
 msgid "Call for reports"
-msgstr "Запрос отчетов"
+msgstr "Запрос отчётов"
 
 #. type: Plain text
 #: documentation/content/en/articles/freebsd-status-report-process/_index.adoc:214
 msgid "Calls for status reports are sent to the following recipients:"
-msgstr "Запросы отчетов о состоянии отправляются следующим получателям:"
+msgstr "Запросы отчётов о состоянии отправляются следующим получателям:"
 
 #. type: Plain text
 #: documentation/content/en/articles/freebsd-status-report-process/_index.adoc:216
@@ -738,7 +738,7 @@ msgid ""
 "to all submitters of last status reports (they may have updates or further "
 "improvements);"
 msgstr ""
-"всем авторам последних отчетов о состоянии (у них могут быть обновления или "
+"всем авторам последних отчётов о состоянии (у них могут быть обновления или "
 "дополнительные улучшения);"
 
 #. type: Plain text
@@ -778,9 +778,9 @@ msgid ""
 "FreeBSD community that attended it."
 msgstr ""
 "ЕвроBSDcon в сентябре - октябре (третий-четвертый квартал); организация "
-"ЕвроBSDcon не заинтересована в написании отчетов для FreeBSD — по крайней "
+"ЕвроBSDcon не заинтересована в написании отчётов для FreeBSD — по крайней "
 "мере, не была заинтересована в октябре 2019 года: причина в том, что "
-"конференция не ориентирована конкретно на FreeBSD. Следовательно, отчеты об "
+"конференция не ориентирована конкретно на FreeBSD. Следовательно, отчёты об "
 "этом мероприятии следует запрашивать у участников сообщества FreeBSD, "
 "которые присутствовали на нем."
 
@@ -802,7 +802,7 @@ msgid ""
 "repository.  The script automatically sends calls to all intended "
 "recipients.  It can also be used through a cron job, for example:"
 msgstr ""
-"Самый простой способ отправки запросов на отчеты о состоянии — использовать "
+"Самый простой способ отправки запросов на отчёты о состоянии — использовать "
 "скрипт link:https://cgit.freebsd.org/doc/tree/tools/sendcalls/sendcalls[[."
 "filename]#sendcalls# на Perl] из каталога [.filename]#tools/sendcalls# git "
 "репозитория документации. Скрипт автоматически отправляет запросы всем "
@@ -826,7 +826,7 @@ msgid ""
 "something goes wrong.  Also please update the example above with your name, "
 "as an additional safety measure."
 msgstr ""
-"Если вы отвечаете за рассылку запросов отчетов о состоянии и используете "
+"Если вы отвечаете за рассылку запросов отчётов о состоянии и используете "
 "задание cron, пожалуйста, запускайте его на freefall и подписывайте своим "
 "именем, чтобы в случае возникновения проблем можно было определить, кто "
 "настроил задание cron. Также, в качестве дополнительной меры "
@@ -839,7 +839,7 @@ msgid ""
 "forums.freebsd.org/threads/call-for-freebsd-2014q4-october-december-status-"
 "reports.49812/[was done in the past]."
 msgstr ""
-"Также может быть полезно объявить сбор отчетов на форумах, как это "
+"Также может быть полезно объявить сбор отчётов на форумах, как это "
 "link:https://forums.freebsd.org/threads/call-for-freebsd-2014q4-october-"
 "december-status-reports.49812/[делалось ранее]."
 
@@ -847,7 +847,7 @@ msgstr ""
 #: documentation/content/en/articles/freebsd-status-report-process/_index.adoc:243
 #, no-wrap
 msgid "Building the report"
-msgstr "Построение отчета"
+msgstr "Построение отчёта"
 
 #. type: Plain text
 #: documentation/content/en/articles/freebsd-status-report-process/_index.adoc:247
@@ -857,8 +857,8 @@ msgid ""
 "reports are being updated, people outside the status team may also review "
 "the individual entries and propose fixes."
 msgstr ""
-"Отправленные отчеты проверяются и объединяются в соответствующем подкаталоге "
-"[.filename]#doc/website/content/en/status/# по мере поступления. Пока отчеты "
+"Отправленные отчёты проверяются и объединяются в соответствующем подкаталоге "
+"[.filename]#doc/website/content/en/status/# по мере поступления. Пока отчёты "
 "обновляются, люди вне команды статуса также могут просматривать отдельные "
 "записи и предлагать исправления."
 
@@ -874,7 +874,7 @@ msgid ""
 msgstr ""
 "Обычно последним шагом в процессе проверки содержания является написание "
 "введения в файле с названием [.filename]#intro.adoc#: хорошее введение можно "
-"написать только после того, как собраны все отчеты. По возможности, полезно "
+"написать только после того, как собраны все отчёты. По возможности, полезно "
 "попросить разных людей написать введение, чтобы добавить разнообразия: "
 "разные люди привнесут разные точки зрения и помогут сохранить его свежим."
 
@@ -885,22 +885,22 @@ msgid ""
 "[.filename]#_index.adoc# file needs to be created: this is the file in which "
 "the reports are distributed into the various categories and sorted."
 msgstr ""
-"После того как все отчеты и введение готовы, необходимо создать файл [."
-"filename]#_index.adoc#: это файл, в котором отчеты распределяются по "
+"После того как все отчёты и введение готовы, необходимо создать файл [."
+"filename]#_index.adoc#: это файл, в котором отчёты распределяются по "
 "различным категориям и сортируются."
 
 #. type: Title ===
 #: documentation/content/en/articles/freebsd-status-report-process/_index.adoc:253
 #, no-wrap
 msgid "Publishing the report"
-msgstr "Публикация отчета"
+msgstr "Публикация отчёта"
 
 #. type: Plain text
 #: documentation/content/en/articles/freebsd-status-report-process/_index.adoc:256
 msgid ""
 "When all the files of the status report are ready, it is time to publish it."
 msgstr ""
-"Когда все файлы отчета о состоянии готовы, пришло время опубликовать его."
+"Когда все файлы отчёта о состоянии готовы, пришло время опубликовать его."
 
 #. type: Plain text
 #: documentation/content/en/articles/freebsd-status-report-process/_index.adoc:259
@@ -979,7 +979,7 @@ msgid ""
 "A link to the rendered report is added between the introduction and the "
 "first entry."
 msgstr ""
-"Ссылка на сформированный отчет добавляется между введением и первой записью."
+"Ссылка на сформированный отчёт добавляется между введением и первой записью."
 
 #. type: Plain text
 #: documentation/content/en/articles/freebsd-status-report-process/_index.adoc:280
