--- a/documentation/content/ru/articles/freebsd-update-server/_index.po
+++ b/documentation/content/ru/articles/freebsd-update-server/_index.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
 "POT-Creation-Date: 2025-11-08 16:17+0000\n"
-"PO-Revision-Date: 2025-11-10 04:45+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/articlesfreebsd-update-server_index/ru/>\n"
@@ -315,14 +315,14 @@ msgid ""
 "to the release and architecture-specific area at [.filename]#scripts/RELEASE/"
 "ARCHITECTURE/build.subr# and applying local changes."
 msgstr ""
-"Это место, откуда загружаются образы ISO (с помощью подпрограммы "
-"`fetchiso()` из файла [.filename]#scripts/build.subr#). Настроенное "
-"расположение не ограничивается URI FTP. Должны работать любые схемы URI, "
-"поддерживаемые стандартной утилитой man:fetch[1]. Пользовательские изменения "
-"кода `fetchiso()` можно установить, скопировав скрипт [.filename]#build."
-"subr# по умолчанию в область, специфичную для выпуска и архитектуры, по пути "
-"[.filename]#scripts/РЕЛИЗ/АРХИТЕКТУРА/build.subr#, и применив локальные "
-"изменения."
+"Это место, откуда загружаются образы ISO (с помощью подпрограммы `fetchiso()`"
+" из файла [.filename]#scripts/build.subr#). Настроенное расположение не "
+"ограничивается URI FTP. Должны работать любые схемы URI, поддерживаемые "
+"стандартной утилитой man:fetch[1]. Пользовательские изменения кода "
+"`fetchiso()` можно установить, скопировав скрипт [.filename]#build.subr# по "
+"умолчанию в область, специфичную для соответствующего релиза и архитектуры, "
+"по пути [.filename]#scripts/РЕЛИЗ/АРХИТЕКТУРА/build.subr#, и применив "
+"локальные изменения."
 
 #. type: Plain text
 #: documentation/content/en/articles/freebsd-update-server/_index.adoc:140
@@ -330,7 +330,7 @@ msgid ""
 "The name of the build host. This information will be displayed on updated "
 "systems when issuing:"
 msgstr ""
-"Имя хоста для сборки. Эта информация будет отображаться на обновленных "
+"Имя хоста для сборки. Эта информация будет отображаться на обновлённых "
 "системах при выполнении команды:"
 
 #. type: delimited block . 4
@@ -667,14 +667,14 @@ msgid ""
 "files need to be updated.  This timestamp-finding works by doing two builds "
 "400 days apart and comparing the results.\""
 msgstr ""
-"В течение этого второго цикла сборки демон протокола сетевого времени, man:"
-"ntpd[8], отключен. По словам `{cperciva}`, почетного офицера безопасности "
-"FreeBSD, \"код сборки https://github.com/freebsd/freebsd-update-build/"
-"[freebsd-update-server] должен идентифицировать временные метки, хранящиеся "
-"в файлах, чтобы их можно было игнорировать при сравнении сборок для "
-"определения того, какие файлы нуждаются в обновлении. Этот поиск временных "
-"меток работает путем выполнения двух сборок с интервалом в 400 дней и "
-"сравнения результатов.\""
+"В течение этого второго цикла сборки демон протокола сетевого времени, "
+"man:ntpd[8], отключен. По словам `{cperciva}`, почётного офицера "
+"безопасности FreeBSD, \"код сборки https://github.com/freebsd/"
+"freebsd-update-build/[freebsd-update-server] должен идентифицировать "
+"временные метки, хранящиеся в файлах, чтобы их можно было игнорировать при "
+"сравнении сборок для определения того, какие файлы нуждаются в обновлении. "
+"Этот поиск временных меток работает путем выполнения двух сборок с "
+"интервалом в 400 дней и сравнения результатов.\""
 
 #. type: delimited block . 4
 #: documentation/content/en/articles/freebsd-update-server/_index.adoc:305
@@ -1033,7 +1033,7 @@ msgstr ""
 "загрузите необходимый файл с link:https://www.FreeBSD.org/security/"
 "advisories/[FreeBSD Security Advisories]. Дополнительную информацию о том, "
 "как интерпретировать рекомендации, можно найти в extref:{handbook}security["
-"FreeBSD Handbook, security-advisories]."
+"Руководства FreeBSD, security-advisories]."
 
 #. type: Plain text
 #: documentation/content/en/articles/freebsd-update-server/_index.adoc:446
@@ -1466,7 +1466,7 @@ msgid ""
 "weights. Using this facility will provide update mirrors, however this tip "
 "is not necessary unless you wish to provide a redundant service."
 msgstr ""
-"Создайте соответствующий extref:{handbook}network-servers[DNS, network-dns] "
+"Создайте соответствующую extref:{handbook}network-servers[DNS, network-dns] "
 "SRV-запись для сервера обновлений и разместите остальные за ним с "
 "переменными весами. Использование этой возможности обеспечит зеркала для "
 "обновлений, однако данный совет не обязателен, если вы не хотите "
