--- a/documentation/content/ru/articles/geom-class/_index.po
+++ b/documentation/content/ru/articles/geom-class/_index.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-11-10 20:57+0300\n"
-"PO-Revision-Date: 2025-11-10 04:45+0000\n"
+"POT-Creation-Date: 2025-11-20 21:22+0300\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/articlesgeom-class_index/ru/>\n"
@@ -451,8 +451,8 @@ msgid ""
 "be created under an arbitrary user-accessible directory.  You do not have to "
 "create the module directory under [.filename]#/usr/src#."
 msgstr ""
-"Для написания нового класса GEOM необходимо создать поддиректорию в любой "
-"доступной пользователю директории. Совсем не обязательно, чтоб ваш модуль "
+"Для написания нового класса GEOM необходимо создать подкаталог в любом "
+"доступном пользователю каталоге. Совсем не обязательно, чтоб ваш модуль "
 "изначально размещался в [.filename]#/usr/src#."
 
 #. type: Title ===
@@ -1175,7 +1175,7 @@ msgid ""
 "to the GEOM subsystem. It knows what geom instance should handle it because "
 "filesystems are hosted directly on a geom instance."
 msgstr ""
-"Файловая система преобразует запрос в экземпляр структуры bio и передает его "
+"Файловая система преобразует запрос в экземпляр структуры bio и передаёт его "
 "системе GEOM. Файловая система \"знает\", что экземпляр geom должен "
 "обработать запрос, так как файловые системы размещаются непосредственно над "
 "экземпляром geom."
@@ -1235,7 +1235,7 @@ msgstr ""
 #: documentation/content/en/articles/geom-class/_index.adoc:387
 msgid "The filesystem gets the data and transfers it to userland."
 msgstr ""
-"Файловая система получает данные и передает их пользовательскому процессу."
+"Файловая система получает данные и передаёт их пользовательскому процессу."
 
 #. type: Plain text
 #: documentation/content/en/articles/geom-class/_index.adoc:389
