--- a/documentation/content/ru/articles/hubs/_index.po
+++ b/documentation/content/ru/articles/hubs/_index.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
 "POT-Creation-Date: 2025-11-08 16:17+0000\n"
-"PO-Revision-Date: 2025-11-10 04:45+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/articleshubs_index/ru/>\n"
@@ -383,7 +383,7 @@ msgstr ""
 "пропускной способности каналов, поскольку не требует передачи измененного "
 "файла целиком (передаются лишь различия). Взамен rsync требует значительных "
 "объемов памяти. Размер каждого процесса зависит от размера синхронизируемого "
-"модуля (в основном от количества директорий и файлов). rsync может "
+"модуля (в основном от количества каталогов и файлов). rsync может "
 "использовать в качестве транспортного протокола `rsh` или `ssh` (по "
 "умолчанию); также, может использоваться внутренний протокол rsync (этот "
 "метод предпочтителен для публичных rsync-серверов). Поддерживается "
