--- a/documentation/content/ru/articles/ldap-auth/_index.po
+++ b/documentation/content/ru/articles/ldap-auth/_index.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-09-23 19:02+0300\n"
-"PO-Revision-Date: 2025-08-15 04:45+0000\n"
+"POT-Creation-Date: 2024-12-29 08:30-0500\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/articlesldap-auth_index/ru/>\n"
@@ -18,7 +18,7 @@ msgstr ""
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Generator: Weblate 4.17\n"
 
-#. type: Yaml Front Matter Hash Value: description
+#. type: YAML Front Matter: description
 #: documentation/content/en/articles/ldap-auth/_index.adoc:1
 #, no-wrap
 msgid "Guide for the configuration of an LDAP server for authentication on FreeBSD"
@@ -97,7 +97,7 @@ msgid ""
 "requirement analysis."
 msgstr ""
 "Эта статья не претендует на исчерпывающее описание вопросов безопасности, "
-"надежности или лучших практик настройки LDAP и других обсуждаемых здесь "
+"надёжности или лучших практик настройки LDAP и других обсуждаемых здесь "
 "сервисов. Хотя автор старается делать всё правильно, вопросы безопасности "
 "рассматриваются лишь в общих чертах. Данная статья должна рассматриваться "
 "только как теоретическая основа, а любая реальная реализация должна "
@@ -133,8 +133,8 @@ msgid ""
 "package:net/openldap26-server[].  Client servers will need the corresponding "
 "package:net/openldap26-client[] libraries."
 msgstr ""
-"В примерах в этом документе будет использоваться LDAP-сервер http://"
-"www.openldap.org/[OpenLDAP]; хотя принципы, изложенные здесь, должны быть "
+"В примерах в этом документе будет использоваться LDAP-сервер http://www."
+"openldap.org/[OpenLDAP]; хотя принципы, изложенные здесь, должны быть "
 "применимы к различным серверам, большая часть конкретных административных "
 "действий специфична для OpenLDAP. В портах доступно несколько версий "
 "сервера, например package:net/openldap26-server[]. Клиентские серверы "
@@ -272,8 +272,8 @@ msgid ""
 "Once OpenLDAP is installed via ports, the following configuration parameters "
 "in [.filename]#/usr/local/etc/openldap/slapd.conf# will enable TLS:"
 msgstr ""
-"После установки OpenLDAP через порты следующие параметры конфигурации в "
-"[.filename]#/usr/local/etc/openldap/slapd.conf# включат TLS:"
+"После установки OpenLDAP через порты следующие параметры конфигурации в [."
+"filename]#/usr/local/etc/openldap/slapd.conf# включат TLS:"
 
 #. type: delimited block . 4
 #: documentation/content/en/articles/ldap-auth/_index.adoc:136
@@ -310,10 +310,10 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/articles/ldap-auth/_index.adoc:147
 msgid ""
-"The [.filename]#cert.crt#, [.filename]#cert.key#, and "
-"[.filename]#cacert.crt# files are necessary for clients to authenticate "
-"_you_ as the valid LDAP server.  If you simply want a server that runs, you "
-"can create a self-signed certificate with OpenSSL:"
+"The [.filename]#cert.crt#, [.filename]#cert.key#, and [.filename]#cacert."
+"crt# files are necessary for clients to authenticate _you_ as the valid LDAP "
+"server.  If you simply want a server that runs, you can create a self-signed "
+"certificate with OpenSSL:"
 msgstr ""
 "Файлы [.filename]#cert.crt#, [.filename]#cert.key# и [.filename]#cacert.crt# "
 "необходимы для аутентификации клиентами _вас_ как действительного LDAP-"
@@ -359,12 +359,12 @@ msgid ""
 "cause of great frustration, so ensure that you follow these steps closely."
 msgstr ""
 "На этом этапе вам будет предложено ввести некоторые значения. Вы можете "
-"ввести любые значения, какие пожелаете; однако важно, чтобы значение "
-"\"Common Name\" (Общее имя) было полным доменным именем сервера OpenLDAP. В "
-"нашем случае и в приведённых примерах сервер называется "
-"_server.example.org_. Неправильное указание этого значения может привести к "
-"сбоям при подключении клиентов. Это может стать причиной серьёзных проблем, "
-"поэтому внимательно следуйте этим шагам."
+"ввести любые значения, какие пожелаете; однако важно, чтобы значение \"Common"
+" Name\" (Общее имя) было полным доменным именем сервера OpenLDAP. В нашем "
+"случае и в приведённых примерах сервер называется _server.example.org_. "
+"Неправильное указание этого значения может привести к сбоям при подключении "
+"клиентов. Это может стать причиной серьёзных проблем, поэтому внимательно "
+"следуйте этим шагам."
 
 #. type: delimited block = 4
 #: documentation/content/en/articles/ldap-auth/_index.adoc:173
@@ -395,15 +395,15 @@ msgstr ""
 #: documentation/content/en/articles/ldap-auth/_index.adoc:192
 msgid ""
 "This will create a self-signed certificate that can be used for the "
-"directives in [.filename]#slapd.conf#, where [.filename]#cert.crt# and "
-"[.filename]#cacert.crt# are the same file.  If you are going to use many "
+"directives in [.filename]#slapd.conf#, where [.filename]#cert.crt# and [."
+"filename]#cacert.crt# are the same file.  If you are going to use many "
 "OpenLDAP servers (for replication via `slurpd`) you will want to see "
 "crossref:ldap-auth[ssl-ca, OpenSSL Certificates for LDAP] to generate a CA "
 "key and use it to sign individual server certificates."
 msgstr ""
 "Это создаст самоподписанный сертификат, который можно использовать для "
-"директив в [.filename]#slapd.conf#, где [.filename]#cert.crt# и "
-"[.filename]#cacert.crt# представляют собой один и тот же файл. Если вы "
+"директив в [.filename]#slapd.conf#, где [.filename]#cert.crt# и [."
+"filename]#cacert.crt# представляют собой один и тот же файл. Если вы "
 "планируете использовать множество серверов OpenLDAP (для репликации через "
 "`slurpd`), рекомендуется ознакомиться с разделом crossref:ldap-auth[ssl-ca, "
 "Сертификаты OpenSSL для LDAP], чтобы сгенерировать ключ центра сертификации "
@@ -499,17 +499,17 @@ msgid ""
 msgstr ""
 "Существует два файла с именем [.filename]#ldap.conf#. Первый — это данный "
 "файл, предназначенный для библиотек OpenLDAP и определяющий, как "
-"взаимодействовать с сервером. Второй — [.filename]#/usr/local/etc/"
-"ldap.conf#, используется pam_ldap."
+"взаимодействовать с сервером. Второй — [.filename]#/usr/local/etc/ldap.conf#"
+", используется pam_ldap."
 
 #. type: Plain text
 #: documentation/content/en/articles/ldap-auth/_index.adoc:242
 msgid ""
 "At this point you should be able to run `ldapsearch -Z` on the client "
 "machine; `-Z` means \"use TLS\".  If you encounter an error, then something "
-"is configured wrong; most likely it is your certificates.  Use "
-"man:openssl[1]'s `s_client` and `s_server` to ensure you have them "
-"configured and signed properly."
+"is configured wrong; most likely it is your certificates.  Use man:"
+"openssl[1]'s `s_client` and `s_server` to ensure you have them configured "
+"and signed properly."
 msgstr ""
 "На этом этапе вы должны быть в состоянии выполнить `ldapsearch -Z` на "
 "клиентской машине; `-Z` означает \"использовать TLS\". Если вы столкнётесь с "
@@ -751,8 +751,8 @@ msgid ""
 "FreeBSD requires two ports to be installed to authenticate against an LDAP "
 "server, package:security/pam_ldap[] and package:net/nss_ldap[]."
 msgstr ""
-"Для аутентификации на сервере LDAP в FreeBSD необходимо установить два "
-"порта: package:security/pam_ldap[] и package:net/nss_ldap[]."
+"Для аутентификации на сервере LDAP в FreeBSD необходимо установить два порта:"
+" package:security/pam_ldap[] и package:net/nss_ldap[]."
 
 #. type: Title ===
 #: documentation/content/en/articles/ldap-auth/_index.adoc:327
@@ -781,8 +781,8 @@ msgstr ""
 "Это _другой файл_, отличный от файла конфигурации библиотечных функций "
 "OpenLDAP, [.filename]#/usr/local/etc/openldap/ldap.conf#; однако он "
 "принимает многие из тех же параметров; фактически он является надмножеством "
-"этого файла. В оставшейся части этого раздела ссылки на "
-"[.filename]#ldap.conf# будут означать [.filename]#/usr/local/etc/ldap.conf#."
+"этого файла. В оставшейся части этого раздела ссылки на [.filename]#ldap."
+"conf# будут означать [.filename]#/usr/local/etc/ldap.conf#."
 
 #. type: Plain text
 #: documentation/content/en/articles/ldap-auth/_index.adoc:339
@@ -801,8 +801,8 @@ msgstr ""
 #: documentation/content/en/articles/ldap-auth/_index.adoc:342
 msgid ""
 "We are identifying our users with the `uid` attribute.  To configure this "
-"(though it is the default), set the `pam_login_attribute` directive in "
-"[.filename]#ldap.conf#:"
+"(though it is the default), set the `pam_login_attribute` directive in [."
+"filename]#ldap.conf#:"
 msgstr ""
 "Мы идентифицируем наших пользователей с помощью атрибута `uid`. Чтобы "
 "настроить это (хотя это значение по умолчанию), укажите директиву "
@@ -841,8 +841,8 @@ msgid ""
 "Users whose shell is not in [.filename]#/etc/shells# will not be able to log "
 "in.  This is particularly important when Bash is set as the user shell on "
 "the LDAP server.  Bash is not included with a default installation of "
-"FreeBSD.  When installed from a package or port, it is located at "
-"[.filename]#/usr/local/bin/bash#.  Verify that the path to the shell on the "
+"FreeBSD.  When installed from a package or port, it is located at [."
+"filename]#/usr/local/bin/bash#.  Verify that the path to the shell on the "
 "server is set correctly:"
 msgstr ""
 "Пользователи, чья оболочка не указана в [.filename]#/etc/shells#, не смогут "
@@ -867,8 +867,8 @@ msgid ""
 "client computer so Bash is found at the correct location:"
 msgstr ""
 "Если в последнем столбце вывода указан `/bin/bash`, есть два варианта "
-"действий. Первый — изменить запись пользователя на сервере LDAP на "
-"[.filename]#/usr/local/bin/bash#. Второй вариант — создать символическую "
+"действий. Первый — изменить запись пользователя на сервере LDAP на [."
+"filename]#/usr/local/bin/bash#. Второй вариант — создать символическую "
 "ссылку на клиентском компьютере LDAP, чтобы Bash находился в правильном "
 "месте:"
 
@@ -916,10 +916,10 @@ msgid ""
 "if you want to use SSH (remember to set the relevant options in [.filename]#/"
 "etc/ssh/sshd_config#, otherwise SSH will not use PAM)."
 msgstr ""
-"В большинстве случаев подходящий файл PAM — это [.filename]#/etc/pam.d/"
-"sshd#, если вы хотите использовать SSH (не забудьте установить "
-"соответствующие параметры в [.filename]#/etc/ssh/sshd_config#, иначе SSH не "
-"будет использовать PAM)."
+"В большинстве случаев подходящий файл PAM — это [.filename]#/etc/pam.d/sshd#"
+", если вы хотите использовать SSH (не забудьте установить соответствующие "
+"параметры в [.filename]#/etc/ssh/sshd_config#, иначе SSH не будет "
+"использовать PAM)."
 
 #. type: Plain text
 #: documentation/content/en/articles/ldap-auth/_index.adoc:392
@@ -1055,10 +1055,12 @@ msgid ""
 "auth            required        pam_unix.so             no_warn try_first_pass\n"
 msgstr ""
 "auth            required        pam_nologin.so          no_warn\n"
-"auth            sufficient      pam_opie.so             no_warn no_fake_prompts\n"
+"auth            sufficient      pam_opie.so             no_warn "
+"no_fake_prompts\n"
 "auth            requisite       pam_opieaccess.so       no_warn allow_local\n"
 "auth            sufficient      /usr/local/lib/pam_ldap.so      no_warn\n"
-"auth            required        pam_unix.so             no_warn try_first_pass\n"
+"auth            required        pam_unix.so             no_warn "
+"try_first_pass\n"
 
 #. type: delimited block . 4
 #: documentation/content/en/articles/ldap-auth/_index.adoc:448
@@ -1068,7 +1070,8 @@ msgid ""
 "account         required        /usr/local/lib/pam_ldap.so      no_warn ignore_authinfo_unavail ignore_unknown_user\n"
 msgstr ""
 "account         required        pam_login_access.so\n"
-"account         required        /usr/local/lib/pam_ldap.so      no_warn ignore_authinfo_unavail ignore_unknown_user\n"
+"account         required        /usr/local/lib/pam_ldap.so      no_warn "
+"ignore_authinfo_unavail ignore_unknown_user\n"
 
 #. type: Plain text
 #: documentation/content/en/articles/ldap-auth/_index.adoc:457
@@ -1080,8 +1083,8 @@ msgid ""
 msgstr ""
 "Поскольку мы добавляем эти строки конкретно в [.filename]#pam.d/sshd#, это "
 "повлияет только на SSH-сеансы. Пользователи LDAP не смогут войти через "
-"консоль. Чтобы изменить это поведение, изучите остальные файлы в "
-"[.filename]#/etc/pam.d# и измените их соответствующим образом."
+"консоль. Чтобы изменить это поведение, изучите остальные файлы в [."
+"filename]#/etc/pam.d# и измените их соответствующим образом."
 
 #. type: Title ===
 #: documentation/content/en/articles/ldap-auth/_index.adoc:460
@@ -1114,8 +1117,8 @@ msgstr ""
 msgid ""
 "The package:net/nss_ldap[] port does this.  It uses the same configuration "
 "file as package:security/pam_ldap[], and should not need any extra "
-"parameters once it is installed.  Instead, what is left is simply to edit "
-"[.filename]#/etc/nsswitch.conf# to take advantage of the directory.  Simply "
+"parameters once it is installed.  Instead, what is left is simply to edit [."
+"filename]#/etc/nsswitch.conf# to take advantage of the directory.  Simply "
 "replace the following lines:"
 msgstr ""
 "Порт package:net/nss_ldap[] выполняет это. Он использует тот же "
@@ -1174,8 +1177,8 @@ msgid ""
 "changing user passwords with man:passwd[1].  As a result of this, most "
 "administrators are left to implement a solution themselves.  I provide some "
 "examples here.  Note that if you write your own password change script, "
-"there are some security issues you should be made aware of; see "
-"crossref:ldap-auth[security-passwd, Password Storage]"
+"there are some security issues you should be made aware of; see crossref:"
+"ldap-auth[security-passwd, Password Storage]"
 msgstr ""
 "К сожалению, на момент написания этой документации FreeBSD не поддерживал "
 "изменение паролей пользователей с помощью man:passwd[1]. В результате "
@@ -1337,7 +1340,8 @@ msgid ""
 msgstr ""
 "  salt = rand.to_s.gsub(/0\\./, '')\n"
 "  pass = pwd1.to_s\n"
-"  hash = \"{SSHA}\"+Base64.encode64(Digest::SHA1.digest(\"#{pass}#{salt}\")+salt).chomp!\n"
+"  hash = \"{SSHA}\"+Base64.encode64(Digest::SHA1.digest(\"#{pass}#{salt}\""
+")+salt).chomp!\n"
 "  return hash\n"
 "end\n"
 
@@ -1770,8 +1774,8 @@ msgstr ""
 #: documentation/content/en/articles/ldap-auth/_index.adoc:757
 msgid ""
 "The steps here are presented as they are with very little attempt at "
-"explaining what is going on-further explanation can be found in "
-"man:openssl[1] and its friends."
+"explaining what is going on-further explanation can be found in man:"
+"openssl[1] and its friends."
 msgstr ""
 "Шаги здесь представлены как есть, без попыток объяснить происходящее — "
 "дополнительные пояснения можно найти в man:openssl[1] и связанных справочных "
@@ -1823,11 +1827,10 @@ msgid ""
 "Once you sign the signing request with [.filename]#root.key#, you will be "
 "able to use [.filename]#ldap-server-one.*# on your LDAP servers."
 msgstr ""
-"Затем, используя первые два шага, описанные выше, создайте ключ "
-"[.filename]#ldap-server-one.key# и запрос на подпись сертификата "
-"[.filename]#ldap-server-one.csr#. После подписания запроса с помощью "
-"[.filename]#root.key# вы сможете использовать [.filename]#ldap-server-one.*# "
-"на своих LDAP-серверах."
+"Затем, используя первые два шага, описанные выше, создайте ключ [.filename"
+"]#ldap-server-one.key# и запрос на подпись сертификата [.filename]#ldap-"
+"server-one.csr#. После подписания запроса с помощью [.filename]#root.key# вы "
+"сможете использовать [.filename]#ldap-server-one.*# на своих LDAP-серверах."
 
 #. type: Plain text
 #: documentation/content/en/articles/ldap-auth/_index.adoc:784
@@ -1876,12 +1879,10 @@ msgstr ""
 #. type: delimited block = 4
 #: documentation/content/en/articles/ldap-auth/_index.adoc:804
 msgid ""
-"Finally, for clients to trust all your servers, distribute "
-"[.filename]#root.crt# (the __certificate__, not the key!) to each client, "
-"and specify it in the `TLSCACertificateFile` directive in "
-"[.filename]#ldap.conf#."
+"Finally, for clients to trust all your servers, distribute [.filename]#root."
+"crt# (the __certificate__, not the key!) to each client, and specify it in "
+"the `TLSCACertificateFile` directive in [.filename]#ldap.conf#."
 msgstr ""
-"Наконец, чтобы клиенты доверяли всем вашим серверам, распространите файл "
-"[.filename]#root.crt# (__сертификат__, а не ключ!) на каждом клиенте и "
-"укажите его в директиве `TLSCACertificateFile` в файле "
-"[.filename]#ldap.conf#."
+"Наконец, чтобы клиенты доверяли всем вашим серверам, распространите файл [."
+"filename]#root.crt# (__сертификат__, а не ключ!) на каждом клиенте и укажите "
+"его в директиве `TLSCACertificateFile` в файле [.filename]#ldap.conf#."
