--- a/documentation/content/ru/articles/linux-users/_index.adoc
+++ b/documentation/content/ru/articles/linux-users/_index.adoc
@@ -118,7 +118,7 @@ FreeBSD предоставляет два метода установки при
 # make WITH_LDAP="YES" install clean
 ....
 
-Обратитесь к extref:{handbook}ports[Использование коллекции портов, ports-using] для получения дополнительной информации.
+Обратитесь к разделу extref:{handbook}ports[Использование коллекции портов, ports-using] для получения дополнительной информации.
 
 [[startup]]
 == Загрузка системы
