--- a/documentation/content/ru/articles/mailing-list-faq/_index.adoc
+++ b/documentation/content/ru/articles/mailing-list-faq/_index.adoc
@@ -61,7 +61,7 @@ toc::[]
 
 === Кто пользуется этими списками рассылки?
 
-Это зависит от регламента каждой конкретной рассылки. Некоторые списки больше ориентированы на разработчиков, некоторые - на всё сообщество FreeBSD в целом. Актуальную информацию смотрите по ссылке: link:https://lists.FreeBSD.org/[этот список].
+Это зависит от регламента каждой конкретной рассылки. Некоторые списки больше ориентированы на разработчиков, некоторые - на всё сообщество FreeBSD в целом. Актуальную информацию смотрите по ссылке link:https://lists.FreeBSD.org/[этот список].
 
 В списках рассылки используется английский язык, если другой язык не указан явно.
 
@@ -132,7 +132,7 @@ toc::[]
 ....
 +
 Эта команда перенаправляет информацию в файл [.filename]#/tmp/dmesg.out#.
-* При использовании операций копирования и вставки учтите, что некоторые такие операции отрицательно сказываются на формате строк. Особенно это стоит учесть при посылке содержимого файлов [.filename]#Makefile#, где `tab` является важным символом. Это довольно часто встречающаяся проблема в link:https://www.FreeBSD.org/support/[ базе данных сообщений об ошибках]. В [.filename]#Makefile# символы tab меняются на пробелы, или раздражающие `=3B` escape последовательности.
+* При использовании операций копирования и вставки учтите, что некоторые такие операции отрицательно сказываются на формате строк. Особенно это стоит учесть при посылке содержимого файлов [.filename]#Makefile#, где `tab` является важным символом. Это довольно часто встречающаяся проблема в link:https://www.FreeBSD.org/support/[ базе данных сообщений об ошибках]. В [.filename]#Makefile# символы tab меняются на пробелы, или раздражающие `=3B` escape-последовательности.
 
 === Каких правил этикета стоит придерживаться при ответе на уже существующее сообщение?
 
