--- a/documentation/content/ru/articles/nanobsd/_index.adoc
+++ b/documentation/content/ru/articles/nanobsd/_index.adoc
@@ -167,15 +167,15 @@ NanoBSD — это инструмент, разработанный {phk} и в 
 . `make_conf_build`: Собрать make.conf из переменных `CONF_WORLD` и `CONF_BUILD`.
 . `build_world`: Сборка системы.
 . `build_kernel`: Собрать файлы ядра.
-. `clean_world`: Очистить целевую директорию.
+. `clean_world`: Очистить целевой каталог.
 . `make_conf_install`: Собрать make.conf из переменных `CONF_WORLD` и `CONF_INSTALL`.
 . `install_world`: Установить все файлы, собранные во время `buildworld`.
-. `install_etc`: Установить необходимые файлы в директорию [.filename]#/etc#, используя команду `make distribution`.
+. `install_etc`: Установить необходимые файлы в каталог [.filename]#/etc#, используя команду `make distribution`.
 . `setup_nanobsd_etc`: на этом этапе происходит первая специфичная для NanoBSD настройка. Создается [.filename]#/etc/diskless#, а корневая файловая система определяется как доступная только для чтения.
 . `install_kernel`: устанавливаются файлы ядра и модулей.
 . `run_customize`: будут вызваны все пользовательские процедуры настройки.
 . `setup_nanobsd`: создаётся специальная структура конфигурационных каталогов. Каталог [.filename]#/usr/local/etc# перемещается в [.filename]#/etc/local#, а затем создаётся символическая ссылка из [.filename]#/etc/local# обратно в [.filename]#/usr/local/etc#.
-. `prune_usr`: пустые директории в [.filename]#/usr# удаляются.
+. `prune_usr`: пустые каталоги в [.filename]#/usr# удаляются.
 . `run_late_customize`: на этом этапе могут быть выполнены самые последние пользовательские скрипты.
 . `fixup_before_diskimage`: Вывести список всех установленных файлов в metalog
 . `create_diskimage`: создает образ диска на основе предоставленных параметров геометрии диска.
@@ -375,7 +375,7 @@ customize_cmd cust_nobeastie
 . Если что-то пойдет не так, перезагрузитесь обратно в предыдущий раздел (который содержит старую, рабочую версию), чтобы восстановить работоспособность системы как можно быстрее. Исправьте все проблемы новой сборки и повторите процесс.
 ====
 
-Для установки нового образа на работающую систему NanoBSD можно использовать скрипт [.filename]#updatep1# или [.filename]#updatep2#, расположенный в директории [.filename]#/root#, в зависимости от того, с какого раздела запущена текущая система.
+Для установки нового образа на работающую систему NanoBSD можно использовать скрипт [.filename]#updatep1# или [.filename]#updatep2#, расположенный в каталоге [.filename]#/root#, в зависимости от того, с какого раздела запущена текущая система.
 
 В зависимости от того, какие службы доступны на хосте, предоставляющем новый образ NanoBSD, и какой тип передачи предпочтителен, можно рассмотреть один из этих трех способов:
 
