--- a/documentation/content/ru/articles/nanobsd/_index.po
+++ b/documentation/content/ru/articles/nanobsd/_index.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
 "POT-Creation-Date: 2024-01-17 20:35-0300\n"
-"PO-Revision-Date: 2025-08-12 04:45+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/articlesnanobsd_index/ru/>\n"
@@ -490,7 +490,7 @@ msgstr "`build_kernel`: Собрать файлы ядра."
 #. type: Plain text
 #: documentation/content/en/articles/nanobsd/_index.adoc:182
 msgid "`clean_world`: Clean the destination directory."
-msgstr "`clean_world`: Очистить целевую директорию."
+msgstr "`clean_world`: Очистить целевой каталог."
 
 #. type: Plain text
 #: documentation/content/en/articles/nanobsd/_index.adoc:183
@@ -512,7 +512,7 @@ msgid ""
 "`install_etc`: Install the necessary files in the [.filename]#/etc# "
 "directory, based on the `make distribution` command."
 msgstr ""
-"`install_etc`: Установить необходимые файлы в директорию [.filename]#/etc#, "
+"`install_etc`: Установить необходимые файлы в каталог [.filename]#/etc#, "
 "используя команду `make distribution`."
 
 #. type: Plain text
@@ -555,7 +555,7 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/articles/nanobsd/_index.adoc:190
 msgid "`prune_usr`: the empty directories from [.filename]#/usr# are removed."
-msgstr "`prune_usr`: пустые директории в [.filename]#/usr# удаляются."
+msgstr "`prune_usr`: пустые каталоги в [.filename]#/usr# удаляются."
 
 #. type: Plain text
 #: documentation/content/en/articles/nanobsd/_index.adoc:191
@@ -1441,7 +1441,7 @@ msgid ""
 msgstr ""
 "Для установки нового образа на работающую систему NanoBSD можно использовать "
 "скрипт [.filename]#updatep1# или [.filename]#updatep2#, расположенный в "
-"директории [.filename]#/root#, в зависимости от того, с какого раздела "
+"каталоге [.filename]#/root#, в зависимости от того, с какого раздела "
 "запущена текущая система."
 
 #. type: Plain text
