--- a/documentation/content/ru/articles/pam/_index.po
+++ b/documentation/content/ru/articles/pam/_index.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-09-30 21:38+0300\n"
+"POT-Creation-Date: 2024-12-29 08:30-0500\n"
 "PO-Revision-Date: 2025-08-15 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
@@ -18,7 +18,7 @@ msgstr ""
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Generator: Weblate 4.17\n"
 
-#. type: Yaml Front Matter Hash Value: description
+#. type: YAML Front Matter: description
 #: documentation/content/en/articles/pam/_index.adoc:1
 #, no-wrap
 msgid "A guide to the PAM system and modules under FreeBSD"
@@ -73,9 +73,9 @@ msgid ""
 "modules."
 msgstr ""
 "В этой статье описываются принципы и механизмы, лежащие в основе библиотеки "
-"Подключаемых Модулей Аутентификации (PAM - Pluggable Authentication "
-"Modules), и рассказывается, как настроить PAM, как интегрировать PAM в "
-"приложения и как создавать модули PAM."
+"Подключаемых Модулей Аутентификации (PAM - Pluggable Authentication Modules)"
+", и рассказывается, как настроить PAM, как интегрировать PAM в приложения и "
+"как создавать модули PAM."
 
 #. type: Plain text
 #: documentation/content/en/articles/pam/_index.adoc:85
@@ -601,17 +601,17 @@ msgstr "`auth`, `account`, `session` и `password` являются подсис
 #. type: Plain text
 #: documentation/content/en/articles/pam/_index.adoc:230
 msgid ""
-"[.filename]#pam_nologin.so#, [.filename]#pam_unix.so#, "
-"[.filename]#pam_login_access.so#, [.filename]#pam_lastlog.so# and "
-"[.filename]#pam_permit.so# are modules. It is clear from this example that "
-"[.filename]#pam_unix.so# provides at least two facilities (authentication "
-"and account management.)"
+"[.filename]#pam_nologin.so#, [.filename]#pam_unix.so#, [."
+"filename]#pam_login_access.so#, [.filename]#pam_lastlog.so# and [."
+"filename]#pam_permit.so# are modules. It is clear from this example that [."
+"filename]#pam_unix.so# provides at least two facilities (authentication and "
+"account management.)"
 msgstr ""
-"[.filename]#pam_nologin.so#, [.filename]#pam_unix.so#, "
-"[.filename]#pam_login_access.so#, [.filename]#pam_lastlog.so# и "
-"[.filename]#pam_permit.so# являются модулями. Из этого примера видно, что "
-"[.filename]#pam_unix.so# реализует по крайней мере две подсистемы "
-"(аутентификацию и управление учётными записями)."
+"[.filename]#pam_nologin.so#, [.filename]#pam_unix.so#, [."
+"filename]#pam_login_access.so#, [.filename]#pam_lastlog.so# и [."
+"filename]#pam_permit.so# являются модулями. Из этого примера видно, что [."
+"filename]#pam_unix.so# реализует по крайней мере две подсистемы ("
+"аутентификацию и управление учётными записями)."
 
 #. type: Title ==
 #: documentation/content/en/articles/pam/_index.adoc:232
@@ -721,8 +721,8 @@ msgid ""
 "SSH agent, etc."
 msgstr ""
 "Функция man:pam_open_session[3] выполняет действия, связанные с "
-"установлением сеанса: добавление записей в базы данных [.filename]#utmp# и "
-"[.filename]#wtmp#, запуск агента SSH и так далее."
+"установлением сеанса: добавление записей в базы данных [.filename]#utmp# и [."
+"filename]#wtmp#, запуск агента SSH и так далее."
 
 #. type: Plain text
 #: documentation/content/en/articles/pam/_index.adoc:258
@@ -732,8 +732,8 @@ msgid ""
 "the SSH agent, etc."
 msgstr ""
 "Функция man:pam_close_session[3] выполняет действия, связанные с закрытием "
-"сеанса: добавление записей в базы данных [.filename]#utmp# и "
-"[.filename]#wtmp#, завершение работы агента SSH и так далее."
+"сеанса: добавление записей в базы данных [.filename]#utmp# и [."
+"filename]#wtmp#, завершение работы агента SSH и так далее."
 
 #. type: Labeled list
 #: documentation/content/en/articles/pam/_index.adoc:259
@@ -793,13 +793,12 @@ msgstr "Именование модулей"
 #. type: Plain text
 #: documentation/content/en/articles/pam/_index.adoc:278
 msgid ""
-"FreeBSD implements each mechanism in a single module, named "
-"`pam_mechanism.so` (for instance, `pam_unix.so` for the UNIX(R) mechanism.)  "
-"Other implementations sometimes have separate modules for separate "
-"facilities, and include the facility name as well as the mechanism name in "
-"the module name.  To name one example, Solaris(TM) has a "
-"`pam_dial_auth.so.1` module which is commonly used to authenticate dialup "
-"users."
+"FreeBSD implements each mechanism in a single module, named `pam_mechanism."
+"so` (for instance, `pam_unix.so` for the UNIX(R) mechanism.)  Other "
+"implementations sometimes have separate modules for separate facilities, and "
+"include the facility name as well as the mechanism name in the module name.  "
+"To name one example, Solaris(TM) has a `pam_dial_auth.so.1` module which is "
+"commonly used to authenticate dialup users."
 msgstr ""
 "Во FreeBSD каждый механизм реализуется в отдельном модуле с именем "
 "`pam_mechanism.so` (например, `pam_unix.so` для механизма UNIX(R).) В других "
@@ -927,8 +926,8 @@ msgid ""
 "This control flag was introduced by Sun in Solaris(TM) 9 (SunOS(TM) 5.9), "
 "and is also supported by OpenPAM."
 msgstr ""
-"Этот управляющий флаг был добавлен компанией Sun в Solaris(TM) 9 (SunOS(TM) "
-"5.9), и поддерживается в OpenPAM."
+"Этот управляющий флаг был добавлен компанией Sun в Solaris(TM) 9 (SunOS(TM) 5"
+".9), и поддерживается в OpenPAM."
 
 #. type: Labeled list
 #: documentation/content/en/articles/pam/_index.adoc:308
@@ -1108,9 +1107,8 @@ msgstr ""
 #: documentation/content/en/articles/pam/_index.adoc:343
 msgid ""
 "The server calls man:pam_acct_mgmt[3] to verify that the requested account "
-"is available and valid. If the password is correct but has expired, "
-"man:pam_acct_mgmt[3] will return `PAM_NEW_AUTHTOK_REQD` instead of "
-"`PAM_SUCCESS`."
+"is available and valid. If the password is correct but has expired, man:"
+"pam_acct_mgmt[3] will return `PAM_NEW_AUTHTOK_REQD` instead of `PAM_SUCCESS`."
 msgstr ""
 "Сервер вызывает функцию man:pam_acct_mgmt[3] для проверки того, что "
 "запрошенная учётная запись доступна и корректна. Если пароль верен, но его "
@@ -1131,10 +1129,10 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/articles/pam/_index.adoc:345
 msgid ""
-"Now that the applicant has been properly authenticated, the server calls "
-"man:pam_setcred[3] to establish the credentials of the requested account. It "
-"is able to do this because it acts on behalf of the arbitrator, and holds "
-"the arbitrator's credentials."
+"Now that the applicant has been properly authenticated, the server calls man:"
+"pam_setcred[3] to establish the credentials of the requested account. It is "
+"able to do this because it acts on behalf of the arbitrator, and holds the "
+"arbitrator's credentials."
 msgstr ""
 "Теперь, когда аппликант полностью аутентифицирован, сервер вызывает функцию "
 "man:pam_setcred[3] для получения полномочий запрошенной учётной записи. "
@@ -1144,8 +1142,8 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/articles/pam/_index.adoc:346
 msgid ""
-"Once the correct credentials have been established, the server calls "
-"man:pam_open_session[3] to set up the session."
+"Once the correct credentials have been established, the server calls man:"
+"pam_open_session[3] to set up the session."
 msgstr ""
 "После получения необходимых полномочий, сервер вызывает функцию "
 "man:pam_open_session[3] для установления сеанса."
@@ -1162,8 +1160,8 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/articles/pam/_index.adoc:348
 msgid ""
-"Once the server is done serving the client, it calls "
-"man:pam_close_session[3] to tear down the session."
+"Once the server is done serving the client, it calls man:"
+"pam_close_session[3] to tear down the session."
 msgstr ""
 "После того, как сервер закончил обслуживание клиента, он вызывает функцию "
 "man:pam_close_session[3] для закрытия сеанса."
@@ -1240,10 +1238,10 @@ msgstr ""
 "получается, что, хотя порядок следования строк для одной и той же услуги и "
 "подсистемы является значимым, порядок перечисления отдельных сервисов не "
 "значим. В примерах из оригинальной работы по PAM строки конфигурации "
-"сгруппированы по подсистемам, в поставляемом с Solaris(TM) файле "
-"[.filename]#pam.conf# именно так и сделано, но в стандартном "
-"конфигурационном файле из поставки FreeBSD строки настроек сгруппированы по "
-"сервисам. Подходит любой из этих способов; они имеют один и тот же смысл."
+"сгруппированы по подсистемам, в поставляемом с Solaris(TM) файле [."
+"filename]#pam.conf# именно так и сделано, но в стандартном конфигурационном "
+"файле из поставки FreeBSD строки настроек сгруппированы по сервисам. "
+"Подходит любой из этих способов; они имеют один и тот же смысл."
 
 #. type: Title ====
 #: documentation/content/en/articles/pam/_index.adoc:376
@@ -1267,16 +1265,16 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/articles/pam/_index.adoc:384
 msgid ""
-"These per-service policy files have only four fields instead of "
-"[.filename]#pam.conf#'s five: the service name field is omitted.  Thus, "
+"These per-service policy files have only four fields instead of [."
+"filename]#pam.conf#'s five: the service name field is omitted.  Thus, "
 "instead of the sample [.filename]#pam.conf# line from the previous section, "
 "one would have the following line in [.filename]#/etc/pam.d/login#:"
 msgstr ""
 "Такие файлы политик, ориентированные на сервисы, имеют только четыре поля, "
 "вместо пяти полей в файле [.filename]#pam.conf#: поле имени сервиса опущено. "
 "Таким образом, вместо примера строки файла [.filename]#pam.conf# из "
-"предыдущего раздела получится следующая строка в файле [.filename]#/etc/"
-"pam.d/login#:"
+"предыдущего раздела получится следующая строка в файле [.filename]#/etc/pam."
+"d/login#:"
 
 #. type: delimited block . 4
 #: documentation/content/en/articles/pam/_index.adoc:388
@@ -1321,12 +1319,12 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/articles/pam/_index.adoc:402
 msgid ""
-"Since each service's policy is stored in a separate file, the "
-"[.filename]#pam.d# mechanism also makes it very easy to install additional "
+"Since each service's policy is stored in a separate file, the [."
+"filename]#pam.d# mechanism also makes it very easy to install additional "
 "policies for third-party software packages."
 msgstr ""
-"Так как политика каждого сервиса хранится в отдельном файле, то механизм "
-"[.filename]#pam.d# делает установку дополнительных политик для программных "
+"Так как политика каждого сервиса хранится в отдельном файле, то механизм [."
+"filename]#pam.d# делает установку дополнительных политик для программных "
 "пакетов сторонних разработчиков очень лёгкой задачей."
 
 #. type: Title ====
@@ -1391,16 +1389,16 @@ msgid ""
 "omitted from the actual configuration lines, which then start with the "
 "facility name."
 msgstr ""
-"Заметьте, что если вы используете [.filename]#/etc/pam.d/# вместо "
-"[.filename]#/etc/pam.conf#, то имя сервиса задается именем файла политики, и "
+"Заметьте, что если вы используете [.filename]#/etc/pam.d/# вместо [."
+"filename]#/etc/pam.conf#, то имя сервиса задается именем файла политики, и "
 "опускается из строк настройки, которые в таком случае начинаются с названия "
 "подсистемы."
 
 #. type: Plain text
 #: documentation/content/en/articles/pam/_index.adoc:423
 msgid ""
-"The facility is one of the four facility keywords described in "
-"crossref:pam[pam-facilities-primitives, Facilities and Primitives]."
+"The facility is one of the four facility keywords described in crossref:"
+"pam[pam-facilities-primitives, Facilities and Primitives]."
 msgstr ""
 "Имя подсистемы представляет собой одно из четырёх ключевых слов, описанных в "
 "<<pam-facilities-primitives>>."
@@ -1414,10 +1412,17 @@ msgid ""
 "Linux-PAM supports an alternate syntax that lets you specify the action to associate with each possible return code, but this should be avoided as it is non-standard and closely tied in with the way Linux-PAM dispatches service calls (which differs greatly from the way Solaris(TM) and OpenPAM do it.) \n"
 "Unsurprisingly, OpenPAM does not support this syntax.\n"
 msgstr ""
-"Точно также управляющий флаг является одним из четырёх ключевых слов, описанных в разделе\n"
-"\tcrossref:pam[pam-chains-policies, Цепочки и политики], в котором рассказано, как интерпретировать возвращаемый из модуля код.\n"
-" В Linux-PAM поддерживается альтернативный синтаксис, который позволяет указать действие, связанной с каждый возможным кодом возврата, но этого следует избегать, так как он не является стандартным и тесно связан со способом диспетчеризации вызовов сервисов в Linux-PAM (а он значительно отличается от способа взаимодействия в Solaris(TM) и OpenPAM).\n"
-" Не вызывает удивления тот факт, что в OpenPAM этот синтаксис не поддерживается.\n"
+"Точно также управляющий флаг является одним из четырёх ключевых слов, "
+"описанных в разделе\n"
+"\tcrossref:pam[pam-chains-policies, Цепочки и политики], в котором "
+"рассказано, как интерпретировать возвращаемый из модуля код.\n"
+" В Linux-PAM поддерживается альтернативный синтаксис, который позволяет "
+"указать действие, связанной с каждый возможным кодом возврата, но этого "
+"следует избегать, так как он не является стандартным и тесно связан со "
+"способом диспетчеризации вызовов сервисов в Linux-PAM (а он значительно "
+"отличается от способа взаимодействия в Solaris(TM) и OpenPAM).\n"
+" Не вызывает удивления тот факт, что в OpenPAM этот синтаксис не "
+"поддерживается.\n"
 
 #. type: Title ===
 #: documentation/content/en/articles/pam/_index.adoc:430
@@ -1599,11 +1604,11 @@ msgid ""
 "password), and in the preliminary phase it treats `binding` and `sufficient` "
 "modules as if they were `required`."
 msgstr ""
-"Третьим и последним исключением является то, что функция "
-"man:pam_chauthtok[3] отрабатывает полную цепочку дважды (один раз для "
-"предварительных проверок, и ещё раз для реального задания пароля), и на "
-"подготовительной фазе она считает, что модули `binding` и `sufficient` "
-"являются равнозначными `required`."
+"Третьим и последним исключением является то, что функция man:pam_chauthtok[3]"
+" отрабатывает полную цепочку дважды (один раз для предварительных проверок, "
+"и ещё раз для реального задания пароля), и на подготовительной фазе она "
+"считает, что модули `binding` и `sufficient` являются равнозначными "
+"`required`."
 
 #. type: Title ==
 #: documentation/content/en/articles/pam/_index.adoc:485
@@ -1691,10 +1696,10 @@ msgstr "man:pam_group[8]"
 #: documentation/content/en/articles/pam/_index.adoc:515
 msgid ""
 "The man:pam_group[8] module accepts or rejects applicants on the basis of "
-"their membership in a particular file group (normally `wheel` for "
-"man:su[1]).  It is primarily intended for maintaining the traditional "
-"behavior of BSD man:su[1], but has many other uses, such as excluding "
-"certain groups of users from a particular service."
+"their membership in a particular file group (normally `wheel` for man:"
+"su[1]).  It is primarily intended for maintaining the traditional behavior "
+"of BSD man:su[1], but has many other uses, such as excluding certain groups "
+"of users from a particular service."
 msgstr ""
 "Модуль man:pam_group[8] принимает или отвергает аппликантов в зависимости от "
 "их членства в определённой файловой группе (обычно `wheel` для man:su[1]). В "
@@ -1854,12 +1859,12 @@ msgstr "man:pam_rootok[8]"
 msgid ""
 "The man:pam_rootok[8] module reports success if and only if the real user id "
 "of the process calling it (which is assumed to be run by the applicant) is "
-"0.  This is useful for non-networked services such as man:su[1] or "
-"man:passwd[1], to which the `root` should have automatic access."
+"0.  This is useful for non-networked services such as man:su[1] or man:"
+"passwd[1], to which the `root` should have automatic access."
 msgstr ""
 "Модуль man:pam_rootok[8] возвращает положительный результат в том и только в "
-"том случае, если реальный id пользователя процесса, его вызвавшего "
-"(предполагается, что его запускает аппликант) равен 0. Это полезно для "
+"том случае, если реальный id пользователя процесса, его вызвавшего ("
+"предполагается, что его запускает аппликант) равен 0. Это полезно для "
 "несетевых сервисов, таких как man:su[1] или man:passwd[1], к которым "
 "пользователь `root` должен иметь автоматический доступ."
 
@@ -1914,8 +1919,8 @@ msgstr ""
 "Модуль man:pam_ssh[8] предоставляет как сервис аутентификации, так и сеанса. "
 "Сервис аутентификации позволяет пользователям, имеющим секретные ключи SSH, "
 "защищённые паролями, в своих каталогах [.filename]#~/.ssh#, "
-"аутентифицироваться посредством этих паролей. Сеансовый сервис запускает "
-"man:ssh-agent[1] и загружает ключи, которые были расшифрованы на фазе "
+"аутентифицироваться посредством этих паролей. Сеансовый сервис запускает man"
+":ssh-agent[1] и загружает ключи, которые были расшифрованы на фазе "
 "аутентификации. Такая возможность, в частности, полезна для локальных входов "
 "в систему, как в систему X (посредством man:xdm[1] или другого X-менеджера "
 "входов, умеющего работать с PAM), так и на консоль."
@@ -2121,8 +2126,8 @@ msgid ""
 "_link:https://docs.oracle.com/cd/E26505_01/html/E27224/pam-1.html[PAM "
 "Administration]_. Sun Microsystems."
 msgstr ""
-"_link:https://docs.oracle.com/cd/E26505_01/html/E27224/"
-"pam-1.html[Администрирование PAM]_. Sun Microsystems."
+"_link:https://docs.oracle.com/cd/E26505_01/html/E27224/pam-1.html["
+"Администрирование PAM]_. Sun Microsystems."
 
 #. type: Title ===
 #: documentation/content/en/articles/pam/_index.adoc:680
@@ -2145,8 +2150,8 @@ msgid ""
 "_link:http://www.kernel.org/pub/linux/libs/pam/[Linux-PAM homepage]_ Andrew "
 "Morgan."
 msgstr ""
-"_link:http://www.kernel.org/pub/linux/libs/pam/[Домашняя страница Linux-"
-"PAM]_ Andrew Morgan."
+"_link:http://www.kernel.org/pub/linux/libs/pam/[Домашняя страница Linux-PAM]"
+"_ Andrew Morgan."
 
 #. type: Plain text
 #: documentation/content/en/articles/pam/_index.adoc:686
