--- a/documentation/content/ru/articles/pgpkeys/_index.po
+++ b/documentation/content/ru/articles/pgpkeys/_index.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
 "POT-Creation-Date: 2025-11-08 16:17+0000\n"
-"PO-Revision-Date: 2025-11-10 04:45+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/articlespgpkeys_index/ru/>\n"
@@ -46,7 +46,7 @@ msgid ""
 msgstr ""
 "Эти OpenPGP-ключи можно использовать для проверки подписи или отправки "
 "зашифрованной электронной почты офицерам или разработчикам `FreeBSD.org`. "
-"Полный набор ключей можно загрузить по ссылке: link:https://docs.FreeBSD.org/"
+"Полный набор ключей можно загрузить по ссылке link:https://docs.FreeBSD.org/"
 "pgpkeys/pgpkeys.txt[pgpkeyring.txt]."
 
 #
