--- a/documentation/content/ru/articles/pr-guidelines/_index.adoc
+++ b/documentation/content/ru/articles/pr-guidelines/_index.adoc
@@ -6,11 +6,11 @@ authors:
     author: 'Hiten Pandya'
 description: 'Эти рекомендации описывают рекомендуемые методы обработки отчётов о проблемах FreeBSD (PR — Problem Reports).'
 tags: ["PR", "guideline", "bugs", "maintenance", "BugZilla", "FreeBSD"]
-title: 'Руководство по обработке отчетов о проблемах'
+title: 'Руководство по обработке отчётов о проблемах'
 trademarks: ["freebsd", "general"]
 ---
 
-= Руководство по обработке отчетов о проблемах
+= Руководство по обработке отчётов о проблемах
 :doctype: article
 :toc: macro
 :toclevels: 1
@@ -44,7 +44,7 @@ endif::[]
 [.abstract-title]
 Аннотация
 
-Эти рекомендации описывают рекомендуемые методы работы с отчетами о проблемах FreeBSD (PR). Хотя они разработаны для команды сопровождения базы данных PR FreeBSD mailto:freebsd-bugbusters@FreeBSD.org[freebsd-bugbusters@FreeBSD.org], эти рекомендации следует соблюдать всем, кто работает с PR FreeBSD.
+Эти рекомендации описывают рекомендуемые методы работы с отчётами о проблемах FreeBSD (PR). Хотя они разработаны для команды сопровождения базы данных PR FreeBSD mailto:freebsd-bugbusters@FreeBSD.org[freebsd-bugbusters@FreeBSD.org], эти рекомендации следует соблюдать всем, кто работает с PR FreeBSD.
 
 '''
 
@@ -58,9 +58,9 @@ Bugzilla — это система управления задачами, исп
 Доступ к Bugzilla предоставлен всему сообществу FreeBSD. Для поддержания согласованности в базе данных и обеспечения единообразного взаимодействия с пользователями были установлены руководящие принципы, охватывающие общие аспекты управления ошибками, такие как предоставление последующих действий, обработка запросов на закрытие и так далее.
 
 [[pr-lifecycle]]
-== Жизненный цикл отчета о проблеме
+== Жизненный цикл отчёта о проблеме
 
-* Репортер отправляет отчет об ошибке на веб-сайте. Ошибка находится в состоянии `Needs Triage`.
+* Репортер отправляет отчёт об ошибке на веб-сайте. Ошибка находится в состоянии `Needs Triage`.
 * Джейн Рэндом БагБастер подтверждает, что отчёт об ошибке содержит достаточно информации для её воспроизведения. Если нет, она взаимодействует с отправителем, чтобы получить необходимые данные. На этом этапе ошибке присваивается статус `Open`.
 * Джо Рандом Коммиттер проявляет интерес к PR и назначает его себе, или Джейн Рандом БагБастер решает, что Джо лучше всего подходит для его решения и назначает PR Джону. Ошибка должна быть переведена в состояние `In Discussion`.
 * Джо кратко общается с инициатором (убедившись, что всё заносится в журнал аудита) и определяет причину проблемы.
@@ -74,7 +74,7 @@ Bugzilla — это система управления задачами, исп
 ====
 
 [[pr-states]]
-== Состояние отчета о проблеме
+== Состояние отчёта о проблеме
 
 Важно обновлять состояние PR при выполнении определённых действий. Состояние должно точно отражать текущий статус работы над PR.
 
@@ -84,7 +84,7 @@ Bugzilla — это система управления задачами, исп
 Когда работа над PR завершена и ответственные разработчики уверены в исправлении, они отправят обновление в PR и изменят его состояние на «feedback». На этом этапе автор должен оценить исправление в своём контексте и ответить, была ли действительно устранена проблема.
 ====
 
-Отчет о проблеме может находиться в одном из следующих состояний:
+Отчёт о проблеме может находиться в одном из следующих состояний:
 
 open (открыто)::
 Начальное состояние; проблема была указана и требует рассмотрения.
@@ -102,7 +102,7 @@ suspended (приостановлено)::
 Проблема не решается из-за недостатка информации или ресурсов. Это отличный вариант для тех, кто ищет проект для реализации. Если проблему не удастся решить вовсе, она будет закрыта, а не приостановлена. Документационный проект использует статус «приостановлено» для пунктов списка пожеланий, требующих значительного объема работы, на который у участников сейчас нет времени.
 
 closed (закрыто)::
-Проблемный отчет закрывается, когда все изменения внедрены, задокументированы и протестированы, или когда исправление проблемы прекращено.
+Проблемный отчёт закрывается, когда все изменения внедрены, задокументированы и протестированы, или когда исправление проблемы прекращено.
 
 [NOTE]
 ====
@@ -110,9 +110,9 @@ closed (закрыто)::
 ====
 
 [[pr-types]]
-== Типы отчетов о проблемах
+== Типы отчётов о проблемах
 
-При обработке отчетов о проблемах, будь вы разработчиком с прямым доступом к базе данных отчетов или участником, который просматривает базу данных и отправляет ответы с исправлениями, комментариями, предложениями или запросами на изменения, вы столкнетесь с несколькими различными типами PR.
+При обработке отчётов о проблемах, будь вы разработчиком с прямым доступом к базе данных отчётов или участником, который просматривает базу данных и отправляет ответы с исправлениями, комментариями, предложениями или запросами на изменения, вы столкнетесь с несколькими различными типами PR.
 
 * crossref:pr-guidelines[pr-unassigned, Неназначенные PR]
 * crossref:pr-guidelines[pr-assigned, Назначенные PR]
@@ -128,7 +128,7 @@ closed (закрыто)::
 Когда поступают PR, они изначально назначаются на обобщённого исполнителя. Такие исполнители всегда начинаются с префикса `freebsd-`. Точное значение по умолчанию зависит от категории; в большинстве случаев оно соответствует определённому списку рассылки FreeBSD. Вот текущий список, с наиболее распространёнными значениями в начале:
 
 [[default-assignees-common]]
-.Назначенные по умолчанию исполнители — наиболее распространенные
+.Назначенные по умолчанию исполнители — наиболее распространённые
 [cols="1,1,1", options="header"]
 |===
 | Тип
