--- a/documentation/content/ru/articles/pr-guidelines/_index.po
+++ b/documentation/content/ru/articles/pr-guidelines/_index.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2024-12-29 08:30-0500\n"
-"PO-Revision-Date: 2025-10-29 04:45+0000\n"
+"POT-Creation-Date: 2025-11-08 16:17+0000\n"
+"PO-Revision-Date: 2025-11-20 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/articlespr-guidelines_index/ru/>\n"
@@ -22,16 +22,14 @@ msgstr ""
 #: documentation/content/en/articles/pr-guidelines/_index.adoc:1
 #, no-wrap
 msgid "These guidelines describe recommended handling practices for FreeBSD Problem Reports (PRs)."
-msgstr ""
-"Эти рекомендации описывают рекомендуемые методы обработки отчётов о "
-"проблемах FreeBSD (PR — Problem Reports)."
+msgstr "Эти рекомендации описывают рекомендуемые методы обработки отчётов о проблемах FreeBSD (PR — Problem Reports)."
 
 #. type: Title =
 #: documentation/content/en/articles/pr-guidelines/_index.adoc:1
 #: documentation/content/en/articles/pr-guidelines/_index.adoc:11
 #, no-wrap
 msgid "Problem Report Handling Guidelines"
-msgstr "Руководство по обработке отчетов о проблемах"
+msgstr "Руководство по обработке отчётов о проблемах"
 
 #. type: Plain text
 #: documentation/content/en/articles/pr-guidelines/_index.adoc:44
@@ -46,7 +44,7 @@ msgid ""
 "Team mailto:freebsd-bugbusters@FreeBSD.org[freebsd-bugbusters@FreeBSD.org], "
 "these guidelines should be followed by anyone working with FreeBSD PRs."
 msgstr ""
-"Эти рекомендации описывают рекомендуемые методы работы с отчетами о "
+"Эти рекомендации описывают рекомендуемые методы работы с отчётами о "
 "проблемах FreeBSD (PR). Хотя они разработаны для команды сопровождения базы "
 "данных PR FreeBSD mailto:freebsd-bugbusters@FreeBSD.org[freebsd-"
 "bugbusters@FreeBSD.org], эти рекомендации следует соблюдать всем, кто "
@@ -95,7 +93,7 @@ msgstr ""
 #: documentation/content/en/articles/pr-guidelines/_index.adoc:62
 #, no-wrap
 msgid "Problem Report Life-cycle"
-msgstr "Жизненный цикл отчета о проблеме"
+msgstr "Жизненный цикл отчёта о проблеме"
 
 #. type: Plain text
 #: documentation/content/en/articles/pr-guidelines/_index.adoc:65
@@ -103,7 +101,7 @@ msgid ""
 "The Reporter submits a bug report on the website. The bug is in the `Needs "
 "Triage` state."
 msgstr ""
-"Репортер отправляет отчет об ошибке на веб-сайте. Ошибка находится в "
+"Репортер отправляет отчёт об ошибке на веб-сайте. Ошибка находится в "
 "состоянии `Needs Triage`."
 
 #. type: Plain text
@@ -197,7 +195,7 @@ msgstr ""
 #: documentation/content/en/articles/pr-guidelines/_index.adoc:79
 #, no-wrap
 msgid "Problem Report State"
-msgstr "Состояние отчета о проблеме"
+msgstr "Состояние отчёта о проблеме"
 
 #. type: Plain text
 #: documentation/content/en/articles/pr-guidelines/_index.adoc:83
@@ -231,7 +229,7 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/articles/pr-guidelines/_index.adoc:92
 msgid "A Problem Report may be in one of the following states:"
-msgstr "Отчет о проблеме может находиться в одном из следующих состояний:"
+msgstr "Отчёт о проблеме может находиться в одном из следующих состояний:"
 
 #. type: Labeled list
 #: documentation/content/en/articles/pr-guidelines/_index.adoc:93
@@ -320,7 +318,7 @@ msgid ""
 "A problem report is closed when any changes have been integrated, "
 "documented, and tested, or when fixing the problem is abandoned."
 msgstr ""
-"Проблемный отчет закрывается, когда все изменения внедрены, "
+"Проблемный отчёт закрывается, когда все изменения внедрены, "
 "задокументированы и протестированы, или когда исправление проблемы "
 "прекращено."
 
@@ -339,7 +337,7 @@ msgstr ""
 #: documentation/content/en/articles/pr-guidelines/_index.adoc:120
 #, no-wrap
 msgid "Types of Problem Reports"
-msgstr "Типы отчетов о проблемах"
+msgstr "Типы отчётов о проблемах"
 
 #. type: Plain text
 #: documentation/content/en/articles/pr-guidelines/_index.adoc:123
@@ -349,8 +347,8 @@ msgid ""
 "and submits followups with patches, comments, suggestions or change "
 "requests, you will come across several different types of PRs."
 msgstr ""
-"При обработке отчетов о проблемах, будь вы разработчиком с прямым доступом к "
-"базе данных отчетов или участником, который просматривает базу данных и "
+"При обработке отчётов о проблемах, будь вы разработчиком с прямым доступом к "
+"базе данных отчётов или участником, который просматривает базу данных и "
 "отправляет ответы с исправлениями, комментариями, предложениями или "
 "запросами на изменения, вы столкнетесь с несколькими различными типами PR."
 
@@ -415,7 +413,7 @@ msgstr ""
 #: documentation/content/en/articles/pr-guidelines/_index.adoc:141
 #, no-wrap
 msgid "Default Assignees - most common"
-msgstr "Назначенные по умолчанию исполнители — наиболее распространенные"
+msgstr "Назначенные по умолчанию исполнители — наиболее распространённые"
 
 #. type: Table
 #: documentation/content/en/articles/pr-guidelines/_index.adoc:145
@@ -868,9 +866,7 @@ msgstr "freebsd-atm"
 #: documentation/content/en/articles/pr-guidelines/_index.adoc:251
 #, no-wrap
 msgid "problem with embedded or small-footprint FreeBSD systems (e.g., NanoBSD/PicoBSD/FreeBSD-arm)"
-msgstr ""
-"проблема со встроенными или компактными системами FreeBSD (например, NanoBSD/"
-"PicoBSD/FreeBSD-arm)"
+msgstr "проблема со встроенными или компактными системами FreeBSD (например, NanoBSD/PicoBSD/FreeBSD-arm)"
 
 #. type: Table
 #: documentation/content/en/articles/pr-guidelines/_index.adoc:253
@@ -1453,12 +1449,12 @@ msgstr ""
 msgid ""
 "If the PR contains sufficient detail, try to reproduce the problem in `-"
 "CURRENT` and `-STABLE`. If you succeed, submit a followup detailing your "
-"findings and try to find someone to assign it to. Set the state to "
-"\"analyzed\" if appropriate."
+"findings and try to find someone to assign it to. Set the state to \"analyzed"
+"\" if appropriate."
 msgstr ""
-"Если PR содержит достаточно деталей, попробуйте воспроизвести проблему в "
-"`-CURRENT` и `-STABLE`. Если удастся, отправьте уточнение с вашими находками "
-"и попытайтесь найти, кому можно назначить задачу. Установите состояние "
+"Если PR содержит достаточно деталей, попробуйте воспроизвести проблему в `-"
+"CURRENT` и `-STABLE`. Если удастся, отправьте уточнение с вашими находками и "
+"попытайтесь найти, кому можно назначить задачу. Установите состояние "
 "\"analyzed\" (проанализировано), если это уместно."
 
 #. type: Plain text
@@ -1494,8 +1490,8 @@ msgid ""
 "yourself?) to do it. Set the state to \"patched\" and assign it to whomever "
 "will do the MFC."
 msgstr ""
-"Если PR описывает ошибку, которая, как вам известно, исправлена в `-CURRENT`"
-", но не в `-STABLE`, попытайтесь выяснить, когда планируется перенос "
+"Если PR описывает ошибку, которая, как вам известно, исправлена в `-"
+"CURRENT`, но не в `-STABLE`, попытайтесь выяснить, когда планируется перенос "
 "исправления (MFC), или найдите кого-то (возможно, себя?), кто сможет это "
 "сделать. Установите статус \"patched\" и назначьте задачу тому, кто займётся "
 "переносом исправления (MFC)."
@@ -1550,7 +1546,7 @@ msgstr ""
 
 #. type: Plain text
 #: documentation/content/en/articles/pr-guidelines/_index.adoc:504
-msgid "Set the component to `junk` (under `Supporting Services`."
+msgid "Set the component to `junk` (under `Supporting Services`)."
 msgstr ""
 "Установите компонент в значение `junk` (в разделе `Поддерживающие сервисы`)."
 
