--- a/documentation/content/ru/articles/problem-reports/_index.adoc
+++ b/documentation/content/ru/articles/problem-reports/_index.adoc
@@ -4,7 +4,7 @@ authors:
     author: 'Dag-Erling Smørgrav'
   - 
     author: 'Mark Linimon'
-description: 'Как лучше сформулировать и отправить отчет о проблеме в проект FreeBSD'
+description: 'Как лучше сформулировать и отправить отчёт о проблеме в проект FreeBSD'
 tags: ["formulate", "submit", "FreeBSD", "PR"]
 title: 'Составление сообщений о проблеме во FreeBSD'
 trademarks: ["freebsd", "ibm", "intel", "sun", "general"]
@@ -213,7 +213,7 @@ toc::[]
 .Некорректное использование категории, зависящей от архитектуры
 [example]
 ====
-Если вы наблюдаете проблему с периферийной картой расширения на распространенной шине или неполадки с конкретного типа жестким диском: в этом случае возможно, что неисправность наблюдается на более чем одной архитектуре, и верным выбором будет `kern`.
+Если вы наблюдаете проблему с периферийной картой расширения на распространённой шине или неполадки с конкретного типа жестким диском: в этом случае возможно, что неисправность наблюдается на более чем одной архитектуре, и верным выбором будет `kern`.
 ====
 ** Если вы не знаете в чем проблема (или вам кажется, что описание не попадает ни под какую из вышеобозначенных), используйте категорию `misc`. Перед тем, как написать PR, можно для начала спросить помощи в {freebsd-questions}. Возможно, там вам подскажут, какую из существующих категорий следует выбрать.
 * _Environment:_ Оно должно максимально точно описывать окружение, в котором встречается проблема. Сюда включается версия операционной системы, версия конкретной программы или файла, содержащего проблему, и любая другая информация, такая, как конфигурация системы, другое программное обеспечение, которое влияет на проблему, и так далее-просто все, что разработчик должен знать для создания условий появления проблемы.
@@ -232,7 +232,7 @@ toc::[]
 
 Существует несколько способов сделать это, желательно в следующем порядке, с перерывом в несколько дней между попытками использования каждого канала связи:
 
-* Отправить письмо по электронной почте в extref:{handbook}eresources/[соответствующий список, eresources-summary] для получения комментариев к отчету.
+* Отправить письмо по электронной почте в extref:{handbook}eresources/[соответствующий список, eresources-summary] для получения комментариев к отчёту.
 * Присоединитесь к соответствующим IRC-каналам. Частичный список доступен здесь: https://wiki.freebsd.org/IRC/Channels[]. Сообщите участникам канала о проблеме и запросите помощь. Будьте терпеливы и оставайтесь в канале после отправки сообщения, чтобы у людей из разных часовых поясов была возможность отреагировать.
 * Найдите коммиттеров, заинтересованных в сообщенной проблеме. Если проблема касается конкретного инструмента, бинарного файла, порта, документа или исходного файла, проверьте https://cgit.FreeBSD.org[Git Repository]. Определите последних коммиттеров, внесших существенные изменения в файл, и попытайтесь связаться с ними через IRC или электронную почту. Список коммиттеров и их адреса электронной почты можно найти в статье extref:{contributors}[Участники проекта FreeBSD].
 
