--- a/documentation/content/ru/articles/problem-reports/_index.po
+++ b/documentation/content/ru/articles/problem-reports/_index.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-09-20 12:50+0300\n"
-"PO-Revision-Date: 2025-09-05 04:45+0000\n"
+"POT-Creation-Date: 2023-09-09 18:13-0300\n"
+"PO-Revision-Date: 2025-11-20 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/articlesproblem-reports_index/ru/>\n"
@@ -18,11 +18,11 @@ msgstr ""
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Generator: Weblate 4.17\n"
 
-#. type: Yaml Front Matter Hash Value: description
+#. type: YAML Front Matter: description
 #: documentation/content/en/articles/problem-reports/_index.adoc:1
 #, no-wrap
 msgid "How to best formulate and submit a problem report to the FreeBSD Project"
-msgstr "Как лучше сформулировать и отправить отчет о проблеме в проект FreeBSD"
+msgstr "Как лучше сформулировать и отправить отчёт о проблеме в проект FreeBSD"
 
 #. type: Title =
 #: documentation/content/en/articles/problem-reports/_index.adoc:1
@@ -158,8 +158,8 @@ msgid ""
 msgstr ""
 "Но как же определить, что является ошибкой, а что нет? Простым правилом, "
 "которому нужно следовать, является следующее - ваша проблема _не_ является "
-"ошибкой, если она формулируется как вопрос (обычно в форме \"Как сделать X?"
-"\" или \"Где можно найти Y?\"). Не всегда это так однозначно, но правило "
+"ошибкой, если она формулируется как вопрос (обычно в форме \"Как сделать X?\""
+" или \"Где можно найти Y?\"). Не всегда это так однозначно, но правило "
 "вопроса покрывает большинство случаев. Если Вам нужен ответ, лучше всего "
 "задать свой вопрос в {freebsd-questions}."
 
@@ -207,10 +207,10 @@ msgid ""
 "wish to read extref:{contributing}[Contributing to the FreeBSD Ports "
 "Collection, ports-contributing].)"
 msgstr ""
-"В любом случае, следование процессу, описанному в extref:{porters-handbook}"
-"upgrading[Руководстве по созданию портов] даст наилучшие результаты. "
-"(Также можно ознакомиться с статьей extref:{contributing}[Вклад в "
-"коллекцию портов FreeBSD, ports-contributing].)"
+"В любом случае, следование процессу, описанному в extref:{porters-"
+"handbook}upgrading[Руководстве по созданию портов] даст наилучшие "
+"результаты. (Также можно ознакомиться с статьей extref:{contributing}[Вклад "
+"в коллекцию портов FreeBSD, ports-contributing].)"
 
 #. type: Plain text
 #: documentation/content/en/articles/problem-reports/_index.adoc:87
@@ -265,8 +265,8 @@ msgstr ""
 #: documentation/content/en/articles/problem-reports/_index.adoc:92
 msgid ""
 "Code in the base system that is written and maintained by others, and "
-"imported into FreeBSD and adapted. Examples include man:clang[1], and "
-"man:sendmail[8]. Most bugs in these areas should be reported to the FreeBSD "
+"imported into FreeBSD and adapted. Examples include man:clang[1], and man:"
+"sendmail[8]. Most bugs in these areas should be reported to the FreeBSD "
 "developers; but in some cases they may need to be reported to the original "
 "authors instead if the problems are not FreeBSD-specific."
 msgstr ""
@@ -316,17 +316,17 @@ msgid ""
 "other than certain recent branches of the base system, so filing a bug "
 "report about an older version will probably only result in a developer "
 "advising you to upgrade to a supported version to see if the problem still "
-"recurs.  The Security Officer team maintains the link:https://"
-"www.FreeBSD.org/security/[list of supported versions]."
+"recurs.  The Security Officer team maintains the link:https://www.FreeBSD."
+"org/security/[list of supported versions]."
 msgstr ""
-"Если проблема в базовой системе, то вам нужно сначала прочесть раздел extref:"
-"{faq}[версии FreeBSD, latest-version] из FAQ, если вы ещё не знакомы с "
-"данной темой. Для FreeBSD возможно исправлять проблемы только для некоторых "
-"недавних веток базовой системы, поэтому отправка сообщения об ошибке для "
-"более старой версии приведёт к тому, что разработчик посоветует вам "
-"обновиться до поддерживаемой версии, чтобы посмотреть присутствует ли в ней "
-"проблема. Команда офицеров безопасности поддерживает link:https://"
-"www.FreeBSD.org/security/[список поддерживаемых версий.]."
+"Если проблема в базовой системе, то вам нужно сначала прочесть раздел "
+"extref:{faq}[версии FreeBSD, latest-version] из FAQ, если вы ещё не знакомы "
+"с данной темой. Для FreeBSD возможно исправлять проблемы только для "
+"некоторых недавних веток базовой системы, поэтому отправка сообщения об "
+"ошибке для более старой версии приведёт к тому, что разработчик посоветует "
+"вам обновиться до поддерживаемой версии, чтобы посмотреть присутствует ли в "
+"ней проблема. Команда офицеров безопасности поддерживает link:https://www."
+"FreeBSD.org/security/[список поддерживаемых версий.]."
 
 #. type: Plain text
 #: documentation/content/en/articles/problem-reports/_index.adoc:103
@@ -372,9 +372,9 @@ msgid ""
 msgstr ""
 "Список extref:{faq}[Часто задаваемых вопросов] (FAQ) по FreeBSD. FAQ "
 "содержит ответы на широкий круг вопросов, таких как вопросы, касающиеся "
-"extref:{faq}[совместимости оборудования, hardware], extref:{faq}"
-"[пользовательских приложений, applications] и extref:{faq}[конфигурации "
-"ядра, kernelconfig]."
+"extref:{faq}[совместимости оборудования, hardware], extref:{faq}["
+"пользовательских приложений, applications] и extref:{faq}[конфигурации ядра, "
+"kernelconfig]."
 
 #. type: Plain text
 #: documentation/content/en/articles/problem-reports/_index.adoc:114
@@ -411,9 +411,9 @@ msgid ""
 "database] (Bugzilla). Unless the problem is recent or obscure, there is a "
 "fair chance it has already been reported."
 msgstr ""
-"Следующим пунктом должна быть https://bugs.freebsd.org/bugzilla/"
-"query.cgi[ база данных PR FreeBSD] (Bugzilla). Если только ваша проблема не "
-"нова или редка, есть некоторый шанс, что о ней уже сообщено."
+"Следующим пунктом должна быть https://bugs.freebsd.org/bugzilla/query.cgi[ "
+"база данных PR FreeBSD] (Bugzilla). Если только ваша проблема не нова или "
+"редка, есть некоторый шанс, что о ней уже сообщено."
 
 #. type: Plain text
 #: documentation/content/en/articles/problem-reports/_index.adoc:117
@@ -427,18 +427,17 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/articles/problem-reports/_index.adoc:120
 msgid ""
-"For the base FreeBSD code, you should carefully study the contents of "
-"[.filename]#/usr/src/UPDATING# on your system or the latest version at "
-"https://cgit.freebsd.org/src/tree/UPDATING[https://cgit.freebsd.org/src/tree/"
+"For the base FreeBSD code, you should carefully study the contents of [."
+"filename]#/usr/src/UPDATING# on your system or the latest version at https://"
+"cgit.freebsd.org/src/tree/UPDATING[https://cgit.freebsd.org/src/tree/"
 "UPDATING].  (This is vital information if you are upgrading from one version "
 "to another, especially if you are upgrading to the FreeBSD-CURRENT branch)."
 msgstr ""
-"Для основного кода FreeBSD вы должны тщательно изучить содержимое файла "
-"[.filename]#/usr/src/UPDATING# или его текущую версию по адресу  https://"
-"cgit.freebsd.org/src/tree/UPDATING[https://cgit.freebsd.org/src/tree/"
-"UPDATING]. (Если вы переходите с одной версии на другую, особенно если вы "
-"обновляетесь до FreeBSD-CURRENT, то в этом файле вы можете найти много "
-"важной информации)."
+"Для основного кода FreeBSD вы должны тщательно изучить содержимое файла [."
+"filename]#/usr/src/UPDATING# или его текущую версию по адресу  https://cgit."
+"freebsd.org/src/tree/UPDATING[https://cgit.freebsd.org/src/tree/UPDATING]. ("
+"Если вы переходите с одной версии на другую, особенно если вы обновляетесь "
+"до FreeBSD-CURRENT, то в этом файле вы можете найти много важной информации)."
 
 #. type: Plain text
 #: documentation/content/en/articles/problem-reports/_index.adoc:123
@@ -456,8 +455,8 @@ msgstr ""
 "индивидуальных портов) или к [.filename]#/usr/ports/CHANGES# (изменения, "
 "касающиеся всей коллекции портов). Они также доступны через интерфейс cgit: "
 "https://cgit.freebsd.org/ports/tree/UPDATING[https://cgit.freebsd.org/ports/"
-"tree/UPDATING] и https://cgit.freebsd.org/ports/tree/CHANGES[https://"
-"cgit.freebsd.org/ports/tree/CHANGES] ."
+"tree/UPDATING] и https://cgit.freebsd.org/ports/tree/CHANGES[https://cgit."
+"freebsd.org/ports/tree/CHANGES] ."
 
 #. type: Title ==
 #: documentation/content/en/articles/problem-reports/_index.adoc:125
@@ -512,8 +511,8 @@ msgid ""
 "provide, the better. For instance, what part of the system does the problem "
 "apply to? Do you only see the problem while installing, or while running? To "
 "illustrate, instead of `Summary: portupgrade is broken`, see how much more "
-"informative this seems: `Summary: port ports-mgmt/portupgrade coredumps on "
-"-current`. (In the case of ports, it is especially helpful to have both the "
+"informative this seems: `Summary: port ports-mgmt/portupgrade coredumps on -"
+"current`. (In the case of ports, it is especially helpful to have both the "
 "category and portname in the \"Summary\" line.)"
 msgstr ""
 "__Избегайте туманных описаний в поле \"Summary\"__. Не стоит предполагать, "
@@ -537,8 +536,7 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/articles/problem-reports/_index.adoc:138
 msgid "Do not use the `patch` or `patch-ready` keywords – they are deprecated."
-msgstr ""
-"Не используйте ключевые слова `patch` или `patch-ready` — они устарели."
+msgstr "Не используйте ключевые слова `patch` или `patch-ready` — они устарели."
 
 #. type: Plain text
 #: documentation/content/en/articles/problem-reports/_index.adoc:139
@@ -585,15 +583,14 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/articles/problem-reports/_index.adoc:143
 msgid ""
-"Include which global options you have specified in your "
-"[.filename]#make.conf#, [.filename]#src.conf#, and [.filename]#src-"
-"env.conf#. Given the infinite number of options, not every combination may "
-"be fully supported."
+"Include which global options you have specified in your [.filename]#make."
+"conf#, [.filename]#src.conf#, and [.filename]#src-env.conf#. Given the "
+"infinite number of options, not every combination may be fully supported."
 msgstr ""
-"Включите информацию о том, какие глобальные опции вы указали в "
-"[.filename]#make.conf#. На заметку: Объявление опций наподобие `-02` и "
-"других, описанных в man:gcc[1] во многих случаях может быть причиной ошибок. "
-"Хотя и разработчики FreeBSD будут принимать патчи, у них не будет желания "
+"Включите информацию о том, какие глобальные опции вы указали в [."
+"filename]#make.conf#. На заметку: Объявление опций наподобие `-02` и других, "
+"описанных в man:gcc[1] во многих случаях может быть причиной ошибок. Хотя и "
+"разработчики FreeBSD будут принимать патчи, у них не будет желания "
 "исследовать такие случаи из-за отсутствия времени и добровольцев, и вместо "
 "этого они могут ответить, что это не поддерживается."
 
@@ -703,8 +700,8 @@ msgstr "Какие порты вы устанавливали"
 #. type: Plain text
 #: documentation/content/en/articles/problem-reports/_index.adoc:157
 msgid ""
-"any environment variables that override the defaults in "
-"[.filename]#bsd.port.mk#, such as `PORTSDIR`"
+"any environment variables that override the defaults in [.filename]#bsd.port."
+"mk#, such as `PORTSDIR`"
 msgstr ""
 "Имеются ли какие-либо переменные окружения, которые переписывают "
 "первоначально-установленные в [.filename]#bsd.port.mk#, такие как, "
@@ -750,9 +747,8 @@ msgid ""
 msgstr ""
 "_Убедитесь, что ваша проблема еще никем не описана._ Мы уже говорили об "
 "этом, но стоит повториться. Потратьте пару минут на составление запросов к "
-"базе PR: https://bugs.freebsd.org/bugzilla/query.cgi[https://"
-"bugs.freebsd.org/bugzilla/query.cgi]. (Несмотря на повторы, об этом "
-"постоянно забывают)"
+"базе PR: https://bugs.freebsd.org/bugzilla/query.cgi[https://bugs.freebsd."
+"org/bugzilla/query.cgi]. (Несмотря на повторы, об этом постоянно забывают)"
 
 #. type: Plain text
 #: documentation/content/en/articles/problem-reports/_index.adoc:162
@@ -776,8 +772,8 @@ msgid ""
 "controversial in the past, you should probably be prepared to not only offer "
 "patches, but also justification for why the patches are \"The Right Thing To "
 "Do\". As noted above, a careful search of the mailing lists using the "
-"archives at https://www.FreeBSD.org/search/#mailinglists[https://"
-"www.FreeBSD.org/search/#mailinglists] is always good preparation."
+"archives at https://www.FreeBSD.org/search/#mailinglists[https://www.FreeBSD."
+"org/search/#mailinglists] is always good preparation."
 msgstr ""
 "_Избегайте полемики._ Если ваше сообщение касается области или способов "
 "реализации, которые ранее вызвали разногласия, вам стоит быть готовым "
@@ -848,11 +844,11 @@ msgid ""
 "more context and are more readable than other diff formats."
 msgstr ""
 "В общем, мы рекомендуем использовать `git format-patch` для создания одного "
-"или серии унифицированных diff-файлов относительно базовой ветки (например, "
-"`origin/main`). Патчи, созданные таким образом, будут содержать хеши Git, а "
+"или серии унифицированных diff-файлов относительно базовой ветки (например, `"
+"origin/main`). Патчи, созданные таким образом, будут содержать хеши Git, а "
 "также ваше имя и адрес электронной почты, что упростит применение вашего "
-"патча коммиттерами и правильное указание вас как автора (с помощью `git "
-"am`). Для небольших изменений, где вы предпочитаете не использовать git, "
+"патча коммиттерами и правильное указание вас как автора (с помощью `git am`)"
+". Для небольших изменений, где вы предпочитаете не использовать git, "
 "убедитесь, что используете man:diff[1] с опцией `-u` для создания "
 "унифицированного diff-файла, так как это даст разработчикам больше контекста "
 "и сделает его более читаемым по сравнению с другими форматами diff."
@@ -982,8 +978,8 @@ msgid ""
 "on your problem faster if you inflate its importance since there are so many "
 "other people who have done exactly that."
 msgstr ""
-"_Серьезность:_ Одно из значений: `Затрагивает только меня (Affects only "
-"me)`, `Затрагивает некоторых людей (Affects some people)` или `Затрагивает "
+"_Серьезность:_ Одно из значений: `Затрагивает только меня (Affects only me)`"
+", `Затрагивает некоторых людей (Affects some people)` или `Затрагивает "
 "многих людей (Affects many people)`. Не переоценивайте проблему; избегайте "
 "отмечать её как `Затрагивает многих людей`, если это не так. Разработчики "
 "FreeBSD не обязательно будут работать над вашей проблемой быстрее, если вы "
@@ -1028,8 +1024,8 @@ msgid ""
 "pages."
 msgstr ""
 "Если проблема в ядре, в библиотеках (таких как стандартная библиотека С "
-"`libc`) или в драйвере из базовой системы, то используйте категорию `kern`. "
-"(Есть несколько исключений, описанных ниже). В общем, это всё, что описано в "
+"`libc`) или в драйвере из базовой системы, то используйте категорию `kern`. ("
+"Есть несколько исключений, описанных ниже). В общем, это всё, что описано в "
 "разделах 2, 3 или 4 справочника."
 
 #. type: Plain text
@@ -1163,8 +1159,8 @@ msgid ""
 "right category."
 msgstr ""
 "У вас простой ПК, и вы подозреваете, что столкнулись с проблемой, "
-"специфичной для конкретного чипсета или материнской платы: верная категория "
-"- `i386`."
+"специфичной для конкретного чипсета или материнской платы: верная категория -"
+" `i386`."
 
 #. type: Block title
 #: documentation/content/en/articles/problem-reports/_index.adoc:249
@@ -1181,7 +1177,7 @@ msgid ""
 "category."
 msgstr ""
 "Если вы наблюдаете проблему с периферийной картой расширения на "
-"распространенной шине или неполадки с конкретного типа жестким диском: в "
+"распространённой шине или неполадки с конкретного типа жестким диском: в "
 "этом случае возможно, что неисправность наблюдается на более чем одной "
 "архитектуре, и верным выбором будет `kern`."
 
@@ -1279,8 +1275,8 @@ msgstr ""
 "обнаружите что-то, что не упомянули в первоначальном отчёте, пожалуйста, "
 "отправьте уточнение. Основная причина, по которой ошибка не исправляется, — "
 "это отсутствие связи с автором отчёта. Проще всего воспользоваться опцией "
-"комментария на веб-странице конкретного PR, которую можно открыть с https://"
-"bugs.freebsd.org/bugzilla/query.cgi[страницы поиска PR]."
+"комментария на веб-странице конкретного PR, которую можно открыть с "
+"https://bugs.freebsd.org/bugzilla/query.cgi[страницы поиска PR]."
 
 #. type: Plain text
 #: documentation/content/en/articles/problem-reports/_index.adoc:270
@@ -1325,15 +1321,15 @@ msgid ""
 "Send an e-mail to extref:{handbook}eresources/[the relevant list, eresources-"
 "summary] seeking comments on the report."
 msgstr ""
-"Отправить письмо по электронной почте в extref:{handbook}eresources/"
-"[соответствующий список, eresources-summary] для получения комментариев к "
-"отчету."
+"Отправить письмо по электронной почте в extref:{handbook}eresources/["
+"соответствующий список, eresources-summary] для получения комментариев к "
+"отчёту."
 
 #. type: Plain text
 #: documentation/content/en/articles/problem-reports/_index.adoc:279
 msgid ""
-"Join the relevant IRC channels. A partial listing is here: https://"
-"wiki.freebsd.org/IRC/Channels[]. Inform the people in that channel about the "
+"Join the relevant IRC channels. A partial listing is here: https://wiki."
+"freebsd.org/IRC/Channels[]. Inform the people in that channel about the "
 "problem report and ask for assistance. Be patient and stay in the channel "
 "after posting, so that the people from different time zones around the world "
 "have a chance to catch up."
@@ -1359,8 +1355,8 @@ msgstr ""
 "исходного файла, проверьте https://cgit.FreeBSD.org[Git Repository]. "
 "Определите последних коммиттеров, внесших существенные изменения в файл, и "
 "попытайтесь связаться с ними через IRC или электронную почту. Список "
-"коммиттеров и их адреса электронной почты можно найти в статье extref:"
-"{contributors}[Участники проекта FreeBSD]."
+"коммиттеров и их адреса электронной почты можно найти в статье "
+"extref:{contributors}[Участники проекта FreeBSD]."
 
 #. type: Plain text
 #: documentation/content/en/articles/problem-reports/_index.adoc:284
