--- a/documentation/content/ru/articles/rc-scripting/_index.po
+++ b/documentation/content/ru/articles/rc-scripting/_index.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
 "POT-Creation-Date: 2025-11-08 16:17+0000\n"
-"PO-Revision-Date: 2025-11-10 04:45+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/articlesrc-scripting_index/ru/>\n"
@@ -1204,7 +1204,7 @@ msgid ""
 "methods to use."
 msgstr ""
 "&#10123; Вежливый демон должен создавать _pidfile_, чтобы его процесс можно "
-"было найти проще и надежнее. Переменная `pidfile`, если она установлена, "
+"было найти проще и надёжнее. Переменная `pidfile`, если она установлена, "
 "указывает man:rc.subr[8], где можно найти pidfile для использования его "
 "стандартными методами."
 
@@ -1572,7 +1572,7 @@ msgstr ""
 "режиме. Системные скрипты должны устанавливаться из [.filename]#src/libexec/"
 "rc/rc.d# через [.filename]#Makefile#, находящийся там. Скрипты портов можно "
 "установить с помощью `USE_RC_SUBR`, как описано extref:{porters-"
-"handbook}special[в Руководстве FreeBSD по созданию портов, rc-скрипты]."
+"handbook}special[в Руководстве FreeBSD по созданию портов, rc-scripts]."
 
 #. type: delimited block = 4
 #: documentation/content/en/articles/rc-scripting/_index.adoc:599
@@ -2355,8 +2355,8 @@ msgid ""
 "service-jails], only one more config line needs to be inserted:"
 msgstr ""
 "Чтобы сделать скрипт готовым к использованию с extref:{handbook}jails["
-"Сервисными Клетками, service-jails], необходимо добавить всего одну строку "
-"конфигурации:"
+"Сервисными Клетками, service-jails], необходимо добавить всего лишь одну "
+"дополнительную конфигурационную строку:"
 
 #. type: delimited block . 4
 #: documentation/content/en/articles/rc-scripting/_index.adoc:866
