--- a/documentation/content/ru/articles/releng/_index.po
+++ b/documentation/content/ru/articles/releng/_index.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
 "POT-Creation-Date: 2025-11-08 16:17+0000\n"
-"PO-Revision-Date: 2025-11-10 04:45+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/articlesreleng_index/ru/>\n"
@@ -200,8 +200,8 @@ msgstr ""
 "бинарных снимков выпусков, а также склонность нашего сообщества "
 "пользователей следить за разработкой -STABLE с помощью Subversion и команды "
 "\"`make buildworld`\" footnote:[extref:{handbook}cutting-edge[Пересборка "
-"world, makeworld]] помогает поддерживать FreeBSD-STABLE в очень надежном "
-"состоянии даже до того, как активизируются мероприятия по обеспечению "
+"world, makeworld]] помогает поддерживать FreeBSD-STABLE в очень надёжном "
+"состоянии даже до того, как будут запущены мероприятия по обеспечению "
 "качества перед основным выпуском."
 
 #. type: Plain text
@@ -235,7 +235,7 @@ msgid ""
 "Bugzilla database through the web interface provided at https://www.freebsd."
 "org/support/bugreports/[https://www.freebsd.org/support/bugreports/]."
 msgstr ""
-"Отчеты об ошибках и запросы функций постоянно отправляются пользователями в "
+"Отчёты об ошибках и запросы функций постоянно отправляются пользователями в "
 "течение цикла выпуска. Сообщения о проблемах вносятся в нашу базу данных "
 "Bugzilla через веб-интерфейс, доступный по адресу https://www.freebsd.org/"
 "support/bugreports/[https://www.freebsd.org/support/bugreports/]."
@@ -986,7 +986,7 @@ msgid ""
 "chroot into the release build hierarchy, to make it harder for the outside "
 "environment to taint this build."
 msgstr ""
-"Изменение корневой директории на верхний каталог иерархии сборки релиза с "
+"Изменение корневого каталога на верхний каталог иерархии сборки релиза с "
 "помощью `chroot`, чтобы усложнить влияние внешней среды на эту сборку."
 
 #. type: Plain text
@@ -1148,7 +1148,7 @@ msgid ""
 msgstr ""
 "Первый диск почти полностью создаётся командой `make release`. Единственные "
 "изменения, которые следует внести в каталог [.filename]#disc1#, — это "
-"добавление директории [.filename]#tools# и как можно большего количества "
+"добавление каталога [.filename]#tools# и как можно большего количества "
 "популярных сторонних программных пакетов, которые поместятся на диск. В "
 "каталоге [.filename]#tools# содержится программное обеспечение, позволяющее "
 "пользователям создавать установочные дискеты из других операционных систем. "
@@ -1193,10 +1193,10 @@ msgid ""
 "filename]#commerce# directory."
 msgstr ""
 "Второй диск также в основном создаётся командой `make release`. Этот диск "
-"содержит «живую файловую систему», которая может использоваться через man:"
-"bsdinstall[8] для диагностики установки FreeBSD. Этот диск должен быть "
-"загрузочным и также содержать сжатую копию репозитория CVS в директории [."
-"filename]#CVSROOT# и демонстрационные версии коммерческого ПО в директории [."
+"содержит «живую файловую систему», которая может использоваться через "
+"man:bsdinstall[8] для диагностики установки FreeBSD. Этот диск должен быть "
+"загрузочным и также содержать сжатую копию репозитория CVS в каталоге [."
+"filename]#CVSROOT# и демонстрационные версии коммерческого ПО в каталоге [."
 "filename]#commerce#."
 
 #. type: Title ====
