--- a/documentation/content/ru/articles/remote-install/_index.adoc
+++ b/documentation/content/ru/articles/remote-install/_index.adoc
@@ -142,7 +142,7 @@ ifconfig_re0="inet 192.168.0.2/24"
 
 Процесс создания образа mfsBSD довольно прост.
 
-Первым шагом необходимо подключить установочный CD FreeBSD или образ ISO установки к [.filename]#/cdrom#. В качестве примера в этой статье мы будем предполагать, что вы загрузили образ ISO FreeBSD 10.1-RELEASE. Подключение этого образа ISO к директории [.filename]#/cdrom# легко выполняется с помощью утилиты man:mdconfig[8]:
+Первым шагом необходимо подключить установочный CD FreeBSD или образ ISO установки к [.filename]#/cdrom#. В качестве примера в этой статье мы будем предполагать, что вы загрузили образ ISO FreeBSD 10.1-RELEASE. Подключение этого образа ISO к каталогу [.filename]#/cdrom# легко выполняется с помощью утилиты man:mdconfig[8]:
 
 [source, shell]
 ....
@@ -168,7 +168,7 @@ ifconfig_re0="inet 192.168.0.2/24"
 
 [NOTE]
 ====
-Указанную команду `make` необходимо выполнять из корневой директории дерева каталогов mfsBSD, например, [.filename]#~/mfsbsd-2.1/#.
+Указанную команду `make` необходимо выполнять из корневого уровня дерева каталогов mfsBSD, например, [.filename]#~/mfsbsd-2.1/#.
 ====
 
 === Загрузка mfsBSD
@@ -283,7 +283,7 @@ ifconfig_re0="inet 192.168.0.2/24"
 
 Для достижения нашей цели выполните следующие шаги:
 
-* Скопируйте ядро `GENERIC` в директорию [.filename]#/boot/kernel#:
+* Скопируйте ядро `GENERIC` в каталог [.filename]#/boot/kernel#:
 +
 [source, shell]
 ....
