--- a/documentation/content/ru/articles/solid-state/_index.po
+++ b/documentation/content/ru/articles/solid-state/_index.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
 "POT-Creation-Date: 2024-12-29 08:30-0500\n"
-"PO-Revision-Date: 2025-10-29 04:45+0000\n"
+"PO-Revision-Date: 2025-11-20 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/articlessolid-state_index/ru/>\n"
@@ -53,7 +53,7 @@ msgid ""
 "the generally low disk space available in the system and the durability of "
 "the storage medium."
 msgstr ""
-"Встраиваемые системы имеют преимущество в повышенной надежности по причине "
+"Встраиваемые системы имеют преимущество в повышенной надёжности по причине "
 "отсутствия в них движущихся частей (жестких дисков). Однако, следует принять "
 "во внимание, что системе, как правило, доступно очень малое дисковое "
 "пространство и ограниченный объем запоминающего устройства."
@@ -320,7 +320,7 @@ msgstr ""
 "испытывать проблемы из-за доступа файловой системы только для чтения, а "
 "также отсутствия записей в [.filename]#/var#, который был создан скриптом [."
 "filename]#/etc/rc.d/var#. Хотя эти проблемы являются временными и "
-"обсуждаются вместе с решением проблем с запуском распространенных "
+"обсуждаются вместе с решением проблем с запуском распространённых "
 "программных пакетов в разделе crossref:solid-state[strategies, Стратегии "
 "работы с системой для случаев небольших и доступных только для чтения "
 "файловых систем]."
@@ -561,7 +561,7 @@ msgstr ""
 "вы не можете одновременно разместить tar-файл на флеш-носителе и распаковать "
 "его - вам не хватит места. Одним из решений этой проблемы, если вы "
 "используете FTP, является распаковка файла во время его передачи по FTP. "
-"Если вы передаете файл именно так, то вы никогда не получите на диске "
+"Если вы передаёте файл именно так, то вы никогда не получите на диске "
 "одновременно архивный файл и его содержимое:"
 
 #. type: delimited block . 4
@@ -638,7 +638,7 @@ msgstr ""
 "режиме только чтения] было указано, что файловая система [.filename]#/var#, "
 "создаваемая скриптом [.filename]#/etc/rc.d/var#, и наличие корневой файловой "
 "системы, доступной только для чтения, приводят к проблемам при работе многих "
-"распространенных программных пакетов, используемых во FreeBSD. В этой статье "
+"распространённых программных пакетов, используемых во FreeBSD. В этой статье "
 "будут даны рекомендации по настройке нормальной работы cron и syslog, "
 "установке портов и веб-сервера Apache."
 
