--- a/documentation/content/ru/articles/vinum/_index.po
+++ b/documentation/content/ru/articles/vinum/_index.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
 "POT-Creation-Date: 2025-11-08 16:17+0000\n"
-"PO-Revision-Date: 2025-11-10 04:45+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/articlesvinum_index/ru/>\n"
@@ -58,7 +58,7 @@ msgid ""
 "implemented."
 msgstr ""
 "Независимо от типа дисков, всегда существуют потенциальные проблемы.  Диски "
-"могут быть слишком малы, слишком медленны или недостаточно надежны для "
+"могут быть слишком малы, слишком медленны или недостаточно надёжны для "
 "соответствия требованиям системы.  Хотя диски становятся больше, требования "
 "к хранению данных также растут.  Часто требуется файловая система, размер "
 "которой превышает емкость одного диска.  Были предложены и реализованы "
@@ -82,7 +82,7 @@ msgstr ""
 "система FreeBSD включает менеджер томов [.filename]#vinum#, драйвер блочных "
 "устройств, который реализует виртуальные диски и решает эти три проблемы. [."
 "filename]#vinum# обеспечивает большую гибкость, производительность и "
-"надежность по сравнению с традиционными системами хранения данных, а также "
+"надёжность по сравнению с традиционными системами хранения данных, а также "
 "реализует модели `RAID`-0, `RAID`-1 и `RAID`-5 как по отдельности, так и в "
 "комбинации."
 
@@ -396,13 +396,13 @@ msgid ""
 "stripe to the next.  The numbers in the data blocks indicate the relative "
 "block numbers."
 msgstr ""
-"Альтернативным решением является _четность_, реализованная в уровнях `RAID` "
+"Альтернативным решением является _чётность_, реализованная в уровнях `RAID` "
 "2, 3, 4 и 5. Из них `RAID-5` представляет наибольший интерес. В реализации [."
 "filename]#vinum# это вариант организации с чередованием, где один блок "
-"каждой полосы выделяется под четность одного из других блоков. В реализации "
-"[.filename]#vinum# плекс `RAID-5` аналогичен плексу с чередованием, за "
-"исключением того, что он реализует `RAID-5`, включая блок четности в каждую "
-"полосу. Как требуется в `RAID-5`, расположение этого блока четности меняется "
+"каждой полосы выделяется под чётность одного из других блоков. В реализации ["
+".filename]#vinum# плекс `RAID-5` аналогичен плексу с чередованием, за "
+"исключением того, что он реализует `RAID-5`, включая блок чётности в каждую "
+"полосу. Как требуется в `RAID-5`, расположение этого блока чётности меняется "
 "от одной полосы к другой. Числа в блоках данных обозначают относительные "
 "номера блоков."
 
@@ -1507,8 +1507,8 @@ msgstr ""
 "filename]#vinum# как идентификатор раздела. Например, имя диска может "
 "выглядеть как [.filename]#/dev/ad0a# или [.filename]#/dev/da2h#. Эти имена "
 "обозначают первый раздел ([.filename]#a#) на первом (0) IDE-диске ([."
-"filename]#ad#) и восьмой раздел ([.filename]#h#) на третьем (2) SCSI-диске "
-"([.filename]#da#) соответственно. В отличие от этого, том [.filename]#vinum# "
+"filename]#ad#) и восьмой раздел ([.filename]#h#) на третьем (2) SCSI-диске (["
+".filename]#da#), соответственно. В отличие от этого, том [.filename]#vinum# "
 "может называться [.filename]#/dev/gvinum/concat#, что не имеет отношения к "
 "имени раздела."
 
