--- a/documentation/content/ru/articles/vpn-ipsec/_index.adoc
+++ b/documentation/content/ru/articles/vpn-ipsec/_index.adoc
@@ -147,7 +147,7 @@ PING 10.246.38.1 (10.246.38.107): 56 data bytes
 round-trip min/avg/max/stddev = 21.145/31.721/53.491/12.179 ms
 ....
 
-На этом этапе трафик передается между сетями, инкапсулированный в туннель gif, но без какого-либо шифрования. Далее используйте IPSec для шифрования трафика с использованием предварительно согласованных ключей (PSK). За исключением IP-адресов, файл [.filename]#/usr/local/etc/racoon/racoon.conf# на обоих шлюзах будет идентичным и выглядеть примерно так:
+На этом этапе трафик передаётся между сетями, инкапсулированный в туннель gif, но без какого-либо шифрования. Далее используйте IPSec для шифрования трафика с использованием предварительно согласованных ключей (PSK). За исключением IP-адресов, файл [.filename]#/usr/local/etc/racoon/racoon.conf# на обоих шлюзах будет идентичным и выглядеть примерно так:
 
 [.programlisting]
 ....
