--- a/documentation/content/ru/articles/contributors/contrib-develinmemoriam.po
+++ b/documentation/content/ru/articles/contributors/contrib-develinmemoriam.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
 "POT-Creation-Date: 2025-03-28 20:31-0400\n"
-"PO-Revision-Date: 2025-10-29 04:45+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/articlescontributorscontrib-develinmemoriam/ru/>\n"
@@ -187,7 +187,7 @@ msgid ""
 "forums.freebsd.org/threads/in-memoriam-hans-petter-william-sirevag-"
 "selasky.89697/[this FreeBSD Forum page]."
 msgstr ""
-"Более полная версия воспоминаний доступна по ссылке: link:https://forums."
+"Более полная версия воспоминаний доступна по ссылке link:https://forums."
 "freebsd.org/threads/in-memoriam-hans-petter-william-sirevag-selasky.89697/["
 "на этой странице форума FreeBSD]."
 
