--- a/documentation/content/ru/articles/filtering-bridges/_index.po
+++ b/documentation/content/ru/articles/filtering-bridges/_index.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
 "POT-Creation-Date: 2025-11-08 16:17+0000\n"
-"PO-Revision-Date: 2025-11-09 04:45+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/articlesfiltering-bridges_index/ru/>\n"
@@ -212,7 +212,7 @@ msgid ""
 msgstr ""
 "Теперь необходимо собрать и установить новое ядро. Подробные инструкции "
 "можно найти в разделе extref:{handbook}kernelconfig[Сборка и установка "
-"пользовательского ядра, kernelconfig-building] руководства FreeBSD."
+"пользовательского ядра, kernelconfig-building] Руководства FreeBSD."
 
 #. type: Title ===
 #: documentation/content/en/articles/filtering-bridges/_index.adoc:102
