--- a/documentation/content/ru/articles/ipsec-must/_index.po
+++ b/documentation/content/ru/articles/ipsec-must/_index.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
 "POT-Creation-Date: 2025-11-08 16:17+0000\n"
-"PO-Revision-Date: 2025-11-10 04:45+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/articlesipsec-must_index/ru/>\n"
@@ -330,7 +330,7 @@ msgid ""
 "A comprehensive guide on running IPsec on FreeBSD is provided in extref:{vpn-"
 "ipsec}[VPN over IPsec]."
 msgstr ""
-"Более подробно о том, как запустить IPsec во FreeBSD можно прочесть в extref"
+"Более подробно о том, как запустить IPsec во FreeBSD, можно прочесть в extref"
 ":{vpn-ipsec}[VPN через IPsec]."
 
 #. type: Title ==
