--- a/documentation/content/ru/articles/linux-users/_index.po
+++ b/documentation/content/ru/articles/linux-users/_index.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
 "POT-Creation-Date: 2025-11-08 16:17+0000\n"
-"PO-Revision-Date: 2025-11-10 04:45+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/articleslinux-users_index/ru/>\n"
@@ -325,8 +325,8 @@ msgid ""
 "Refer to extref:{handbook}ports[Using the Ports Collection, ports-using] for "
 "more information."
 msgstr ""
-"Обратитесь к extref:{handbook}ports[Использование коллекции портов, ports-"
-"using] для получения дополнительной информации."
+"Обратитесь к разделу extref:{handbook}ports[Использование коллекции портов, "
+"ports-using] для получения дополнительной информации."
 
 #. type: Title ==
 #: documentation/content/en/articles/linux-users/_index.adoc:140
