--- a/documentation/content/ru/articles/mailing-list-faq/_index.po
+++ b/documentation/content/ru/articles/mailing-list-faq/_index.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
 "POT-Creation-Date: 2025-11-08 16:17+0000\n"
-"PO-Revision-Date: 2025-11-10 04:45+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/articlesmailing-list-faq_index/ru/>\n"
@@ -126,8 +126,8 @@ msgid ""
 msgstr ""
 "Это зависит от регламента каждой конкретной рассылки. Некоторые списки "
 "больше ориентированы на разработчиков, некоторые - на всё сообщество FreeBSD "
-"в целом. Актуальную информацию смотрите по ссылке: link:https://lists."
-"FreeBSD.org/[этот список]."
+"в целом. Актуальную информацию смотрите по ссылке link:https://lists.FreeBSD."
+"org/[этот список]."
 
 #. type: Plain text
 #: documentation/content/en/articles/mailing-list-faq/_index.adoc:75
@@ -520,10 +520,10 @@ msgstr ""
 "При использовании операций копирования и вставки учтите, что некоторые такие "
 "операции отрицательно сказываются на формате строк. Особенно это стоит "
 "учесть при посылке содержимого файлов [.filename]#Makefile#, где `tab` "
-"является важным символом. Это довольно часто встречающаяся проблема в link:"
-"https://www.FreeBSD.org/support/[ базе данных сообщений об ошибках]. В [."
-"filename]#Makefile# символы tab меняются на пробелы, или раздражающие `=3B` "
-"escape последовательности."
+"является важным символом. Это довольно часто встречающаяся проблема в "
+"link:https://www.FreeBSD.org/support/[ базе данных сообщений об ошибках]. В ["
+".filename]#Makefile# символы tab меняются на пробелы, или раздражающие `=3B` "
+"escape-последовательности."
 
 #. type: Title ===
 #: documentation/content/en/articles/mailing-list-faq/_index.adoc:159
