--- a/documentation/content/ru/articles/serial-uart/_index.po
+++ b/documentation/content/ru/articles/serial-uart/_index.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
 "POT-Creation-Date: 2025-11-08 16:17+0000\n"
-"PO-Revision-Date: 2025-11-10 04:45+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/articlesserial-uart_index/ru/>\n"
@@ -237,7 +237,7 @@ msgid ""
 "value of the next bit, and so on."
 msgstr ""
 "После стартового бита передаются отдельные биты слова данных, начиная с "
-"младшего значащего бита (LSB). Каждый бит передается в течение точно такого "
+"младшего значащего бита (LSB). Каждый бит передаётся в течение точно такого "
 "же времени, как и все остальные биты, и приемник \"проверяет\" состояние "
 "линии примерно на середине интервала, отведенного для каждого бита, чтобы "
 "определить, является ли бит `1` или `0`. Например, если передача каждого "
@@ -264,8 +264,8 @@ msgid ""
 "receiver to perform simple error checking.  Then at least one Stop Bit is "
 "sent by the transmitter."
 msgstr ""
-"Когда все слово данных отправлено, передатчик может добавить бит четности, "
-"который он генерирует. Бит четности может быть использован приемником для "
+"Когда все слово данных отправлено, передатчик может добавить бит чётности, "
+"который он генерирует. Бит чётности может быть использован приемником для "
 "выполнения простой проверки на ошибки. Затем передатчик отправляет как "
 "минимум один стоповый бит."
 
@@ -282,8 +282,8 @@ msgid ""
 "that the signal was interrupted."
 msgstr ""
 "Когда приемник получил все биты в слове данных, он может проверить биты "
-"четности (как отправитель, так и приемник должны договориться о том, будет "
-"ли использоваться бит четности), а затем приемник ищет стоповый бит. Если "
+"чётности (как отправитель, так и приемник должны договориться о том, будет "
+"ли использоваться бит чётности), а затем приемник ищет стоповый бит. Если "
 "стоповый бит не появляется, когда должен, UART считает все слово искаженным "
 "и сообщит об ошибке кадрирования главному процессору при чтении слова "
 "данных. Обычная причина ошибки кадрирования — несовпадение скорости тактовых "
@@ -450,7 +450,7 @@ msgid ""
 msgstr ""
 "RS232-C также определяет сигнал под названием `Break`, который вызывается "
 "передачей непрерывных значений Spacing (без стартовых или стоповых битов). "
-"Когда на линии данных отсутствует напряжение, считается, что линия передает "
+"Когда на линии данных отсутствует напряжение, считается, что линия передаёт "
 "`Break`."
 
 #. type: Plain text
@@ -462,7 +462,7 @@ msgid ""
 "this, the Framing Error detection can be used to identify Breaks."
 msgstr ""
 "Сигнал `Break` должен иметь длительность больше, чем время, необходимое для "
-"передачи полного байта, включая стартовый, стоповый и биты четности. "
+"передачи полного байта, включая стартовый, стоповый и биты чётности. "
 "Большинство UART способны различить ошибку кадрирования и сигнал Break, но "
 "если UART не поддерживает эту функцию, для определения Break можно "
 "использовать обнаружение ошибки кадрирования."
@@ -1451,9 +1451,9 @@ msgid ""
 "falls to 27.27 words per second, because it now takes 11 bits to send the "
 "eight-bit words, and the modem still only sends 300 bits per second."
 msgstr ""
-"Если используются 8-битные слова данных и биты четности, скорость передачи "
+"Если используются 8-битные слова данных и биты чётности, скорость передачи "
 "данных снижается до 27,27 слов в секунду, так как теперь для передачи "
-"восьмибитных слов требуется 11 бит, а модем по-прежнему передает только 300 "
+"восьмибитных слов требуется 11 бит, а модем по-прежнему передаёт только 300 "
 "бит в секунду."
 
 #. type: Plain text
@@ -1478,12 +1478,12 @@ msgstr ""
 "часто работают с последовательными данными) и преобразуют биты обратно в "
 "байты. Затем эти байты объединяются в пакеты и передаются по телефонной "
 "линии с использованием синхронного метода передачи. Это означает, что "
-"стоповые, стартовые и биты четности, добавленные UART в DTE (компьютере), "
+"стоповые, стартовые и биты чётности, добавленные UART в DTE (компьютере), "
 "удаляются модемом перед передачей отправляющим модемом. Когда эти байты "
 "принимаются удалённым модемом, он добавляет стартовые, стоповые и биты "
-"четности к словам, преобразует их в последовательный формат и отправляет на "
+"чётности к словам, преобразует их в последовательный формат и отправляет на "
 "принимающий UART в удалённом компьютере, который затем удаляет стартовые, "
-"стоповые и биты четности."
+"стоповые и биты чётности."
 
 #. type: Plain text
 #: documentation/content/en/articles/serial-uart/_index.adoc:428
@@ -1513,12 +1513,12 @@ msgid ""
 "that the receiving modem can use to do error-correction without impacting "
 "the transmission speed of the real data."
 msgstr ""
-"Удаляя стартовые, стоповые и биты четности, дополнительные биты данных, "
+"Удаляя стартовые, стоповые и биты чётности, дополнительные биты данных, "
 "которые два модема должны обмениваться между собой для выполнения коррекции "
 "ошибок, в основном скрываются от эффективной скорости передачи, наблюдаемой "
 "отправляющим и принимающим оборудованием DTE. Например, если модем "
 "отправляет десять 7-битных слов другому модему без включения стартовых, "
-"стоповых и битов четности, отправляющий модем сможет добавить 30 бит своей "
+"стоповых и битов чётности, отправляющий модем сможет добавить 30 бит своей "
 "собственной информации, которую принимающий модем может использовать для "
 "коррекции ошибок, не влияя на скорость передачи реальных данных."
 
@@ -1785,7 +1785,7 @@ msgid ""
 "was flawed and could not be reliably be used."
 msgstr ""
 "То же, что и NS16450, с 16-байтовым буфером передачи и приема, но "
-"конструкция буфера была неудачной и не могла быть надежно использована."
+"конструкция буфера была неудачной и не могла быть надёжно использована."
 
 #. type: Labeled list
 #: documentation/content/en/articles/serial-uart/_index.adoc:498
@@ -1803,7 +1803,7 @@ msgid ""
 msgstr ""
 "То же, что и NS16550, но с исправленными недостатками буфера. 16550A и его "
 "преемники стали наиболее популярными UART-устройствами в индустрии ПК, в "
-"основном благодаря их способности надежно работать на высоких скоростях "
+"основном благодаря их способности надёжно работать на высоких скоростях "
 "передачи данных в операционных системах с медленным временем отклика "
 "прерываний."
 
@@ -2039,7 +2039,7 @@ msgstr ""
 "Во внутренних модемах разработчик модема часто эмулирует 8250A/16450 с "
 "помощью микропроцессора модема, и эмулированный UART часто имеет скрытый "
 "буфер размером в несколько сотен байт. Благодаря размеру буфера, эти "
-"эмуляции могут быть такими же надежными, как 16550A, в способности "
+"эмуляции могут быть такими же надёжными, как 16550A, в способности "
 "обрабатывать высокоскоростные данные. Однако большинство операционных систем "
 "по-прежнему сообщают, что UART является только 8250A или 16450, и могут не "
 "эффективно использовать дополнительную буферизацию, присутствующую в "
@@ -2180,7 +2180,7 @@ msgstr "Номер детали"
 #: documentation/content/en/articles/serial-uart/_index.adoc:594
 #, no-wrap
 msgid "Errors (aka \"differences\" reported)"
-msgstr "Ошибки (также известные как \"различия\" в отчетах)"
+msgstr "Ошибки (также известные как \"различия\" в отчётах)"
 
 #. type: Table
 #: documentation/content/en/articles/serial-uart/_index.adoc:595
@@ -2474,7 +2474,8 @@ msgid ""
 msgstr ""
 "Регистр передачи данных (THR).\n"
 "\n"
-"Информация, записанная в этот порт, обрабатывается как слова данных и передается через UART."
+"Информация, записанная в этот порт, обрабатывается как слова данных и "
+"передаётся через UART."
 
 #. type: Table
 #: documentation/content/en/articles/serial-uart/_index.adoc:685
@@ -2600,11 +2601,13 @@ msgid ""
 "Bit 1 -> Receiver FIFO Reset. When a \"1\" is written to this bit, the contents of the FIFO are discarded. Any word currently being assembled in the shift register will be received intact. +\n"
 "Bit 0 -> 16550 FIFO Enable. When set, both the transmit and receive FIFOs are enabled. Any contents in the holding register, shift registers or FIFOs are lost when FIFOs are enabled or disabled. +"
 msgstr ""
-"Регистр управления FIFO (FCR — FIFO Control Register) (Этот порт отсутствует в UART 8250 и 16450.) +\n"
+"Регистр управления FIFO (FCR — FIFO Control Register) (Этот порт отсутствует "
+"в UART 8250 и 16450.) +\n"
 "Бит 7 -> Бит триггера приемника #1 +\n"
 "Бит 6 -> Бит триггера приемника #0 +\n"
 "\n"
-"Эти два бита определяют, при каком количестве данных приемник должен генерировать прерывание, когда FIFO активен. +\n"
+"Эти два бита определяют, при каком количестве данных приемник должен "
+"генерировать прерывание, когда FIFO активен. +\n"
 "7 6 Количество слов перед генерацией прерывания +\n"
 "0 0 1 +\n"
 "0 1 4 +\n"
@@ -2612,10 +2615,18 @@ msgstr ""
 "1 1 14 +\n"
 "Бит 5 -> Зарезервирован, всегда 0. +\n"
 "Бит 4 -> Зарезервирован, всегда 0. +\n"
-"Бит 3 -> Выбор режима DMA. Если бит 0 установлен в \"1\" (FIFO включены), установка этого бита изменяет работу сигналов -RXRDY и -TXRDY с режима 0 на режим 1. +\n"
-"Бит 2 -> Сброс передающего FIFO. При записи \"1\" в этот бит содержимое FIFO очищается. Любое слово, которое передается в данный момент, будет отправлено полностью. Эта функция полезна для прерывания передачи. +\n"
-"Бит 1 -> Сброс приемного FIFO. При записи \"1\" в этот бит содержимое FIFO очищается. Любое слово, которое в данный момент собирается в сдвиговом регистре, будет принято полностью. +\n"
-"Бит 0 -> Включение FIFO 16550. При установке этого бита активируются как передающий, так и приемный FIFO. Любое содержимое в регистре хранения, сдвиговых регистрах или FIFO теряется при включении или отключении FIFO. +"
+"Бит 3 -> Выбор режима DMA. Если бит 0 установлен в \"1\" (FIFO включены), "
+"установка этого бита изменяет работу сигналов -RXRDY и -TXRDY с режима 0 на "
+"режим 1. +\n"
+"Бит 2 -> Сброс передающего FIFO. При записи \"1\" в этот бит содержимое FIFO "
+"очищается. Любое слово, которое передаётся в данный момент, будет отправлено "
+"полностью. Эта функция полезна для прерывания передачи. +\n"
+"Бит 1 -> Сброс приемного FIFO. При записи \"1\" в этот бит содержимое FIFO "
+"очищается. Любое слово, которое в данный момент собирается в сдвиговом "
+"регистре, будет принято полностью. +\n"
+"Бит 0 -> Включение FIFO 16550. При установке этого бита активируются как "
+"передающий, так и приемный FIFO. Любое содержимое в регистре хранения, "
+"сдвиговых регистрах или FIFO теряется при включении или отключении FIFO. +"
 
 #. type: Table
 #: documentation/content/en/articles/serial-uart/_index.adoc:742
@@ -2696,12 +2707,28 @@ msgid ""
 "1 1 8 Data Bits +"
 msgstr ""
 "Регистр управления линией (LCR — Line Control Register) +\n"
-"Бит 7 -> Бит доступа к защелке делителя (DLAB). При установке доступ к регистру передачи/приема данных (THR/RBR) и регистру разрешения прерываний (IER) отключается. Любой доступ к этим портам перенаправляется к регистрам защелки делителя. Установка этого бита, загрузка регистров делителя и сброс DLAB должны выполняться при отключенных прерываниях. +\n"
-"Бит 6 -> Установка прерывания. При установке в \"1\" передатчик начинает передавать непрерывный интервал (Spacing), пока этот бит не будет сброшен в \"0\". Это переопределяет любые передаваемые биты символов. +\n"
-"Бит 5 -> Фиксированный бит четности. При включенной проверке четности установка этого бита приводит к тому, что бит четности всегда будет \"1\" или \"0\" в зависимости от значения бита 4.\n"
-"Бит 4 -> Выбор четности (EPS). При включенной проверке четности и если бит 5 равен \"0\", установка этого бита приводит к использованию и ожиданию четной четности. В противном случае используется нечетная четность. +\n"
-"Бит 3 -> Разрешение проверки четности (PEN). При установке в \"1\" бит четности вставляется между последним битом данных и стоповым битом. UART также ожидает наличие бита четности в принимаемых данных. +\n"
-"Бит 2 -> Количество стоповых битов (STB). Если установлен в \"1\" и используются 5-битные слова данных, передается и ожидается 1.5 стоповых бита в каждом слове данных. Для 6, 7 и 8-битных слов данных передается и ожидается 2 стоповых бита. Если этот бит сброшен в \"0\", используется один стоповый бит в каждом слове данных. +\n"
+"Бит 7 -> Бит доступа к защелке делителя (DLAB). При установке доступ к "
+"регистру передачи/приема данных (THR/RBR) и регистру разрешения прерываний "
+"(IER) отключается. Любой доступ к этим портам перенаправляется к регистрам "
+"защелки делителя. Установка этого бита, загрузка регистров делителя и сброс "
+"DLAB должны выполняться при отключенных прерываниях. +\n"
+"Бит 6 -> Установка прерывания. При установке в \"1\" передатчик начинает "
+"передавать непрерывный интервал (Spacing), пока этот бит не будет сброшен в "
+"\"0\". Это переопределяет любые передаваемые биты символов. +\n"
+"Бит 5 -> Фиксированный бит чётности. При включенной проверке чётности "
+"установка этого бита приводит к тому, что бит чётности всегда будет \"1\" "
+"или \"0\" в зависимости от значения бита 4.\n"
+"Бит 4 -> Выбор чётности (EPS). При включенной проверке чётности и если бит 5 "
+"равен \"0\", установка этого бита приводит к использованию и ожиданию четной "
+"чётности. В противном случае используется нечетная чётность. +\n"
+"Бит 3 -> Разрешение проверки чётности (PEN). При установке в \"1\" бит "
+"чётности вставляется между последним битом данных и стоповым битом. UART "
+"также ожидает наличие бита чётности в принимаемых данных. +\n"
+"Бит 2 -> Количество стоповых битов (STB). Если установлен в \"1\" и "
+"используются 5-битные слова данных, передаётся и ожидается 1.5 стоповых бита "
+"в каждом слове данных. Для 6, 7 и 8-битных слов данных передаётся и "
+"ожидается 2 стоповых бита. Если этот бит сброшен в \"0\", используется один "
+"стоповый бит в каждом слове данных. +\n"
 "Бит 1 -> Бит выбора длины слова #1 (WLSB1) +\n"
 "Бит 0 -> Бит выбора длины слова #0 (WLSB0) +\n"
 "Вместе эти биты определяют количество битов в каждом слове данных. +\n"
@@ -2762,14 +2789,29 @@ msgid ""
 "Bit 0 -> Data Ready (DR) One or more words are in the receive FIFO that the host may read. A word must be completely received and moved from the shift register into the FIFO (or holding register for 8250/16450 designs) before this bit is set."
 msgstr ""
 "Регистр состояния линии (LSR — Line Status Register) +\n"
-"Бит 7 -> Ошибка в FIFO приемника. На UART 8250/16450 этот бит равен нулю. Этот бит устанавливается в «1», когда любой из байтов в FIFO имеет одно или несколько из следующих условий ошибки: PE, FE или BI. +\n"
-"Бит 6 -> Передатчик пуст (TEMT). Когда установлен в «1», в FIFO передатчика или сдвиговом регистре передатчика не осталось слов. Передатчик полностью бездействует. +\n"
-"Бит 5 -> Регистр хранения передатчика пуст (THRE). Когда установлен в «1», в FIFO (или регистре хранения) теперь есть место для передачи как минимум одного дополнительного слова. Передатчик может все еще передавать данные, когда этот бит установлен в «1». +\n"
+"Бит 7 -> Ошибка в FIFO приемника. На UART 8250/16450 этот бит равен нулю. "
+"Этот бит устанавливается в «1», когда любой из байтов в FIFO имеет одно или "
+"несколько из следующих условий ошибки: PE, FE или BI. +\n"
+"Бит 6 -> Передатчик пуст (TEMT). Когда установлен в «1», в FIFO передатчика "
+"или сдвиговом регистре передатчика не осталось слов. Передатчик полностью "
+"бездействует. +\n"
+"Бит 5 -> Регистр хранения передатчика пуст (THRE). Когда установлен в «1», в "
+"FIFO (или регистре хранения) теперь есть место для передачи как минимум "
+"одного дополнительного слова. Передатчик может все еще передавать данные, "
+"когда этот бит установлен в «1». +\n"
 "Бит 4 -> Прерывание по Break (BI). Приемник обнаружил сигнал Break. +\n"
-"Бит 3 -> Ошибка кадрирования (FE). Обнаружен стартовый бит, но стоповый бит не появился в ожидаемое время. Принятое слово, вероятно, искажено. +\n"
-"Бит 2 -> Ошибка четности (PE). Бит четности для принятого слова был некорректен. +\n"
-"Бит 1 -> Ошибка переполнения (OE). Было получено новое слово, но в буфере приема не было места. Вновь поступившее слово в сдвиговом регистре отбрасывается. На UART 8250/16450 слово в регистре хранения отбрасывается, а вновь поступившее слово помещается в регистр хранения. +\n"
-"Бит 0 -> Данные готовы (DR). Одно или несколько слов находятся в FIFO приемника, которые хост может прочитать. Слово должно быть полностью принято и перемещено из сдвигового регистра в FIFO (или регистр хранения для 8250/16450) до того, как этот бит будет установлен."
+"Бит 3 -> Ошибка кадрирования (FE). Обнаружен стартовый бит, но стоповый бит "
+"не появился в ожидаемое время. Принятое слово, вероятно, искажено. +\n"
+"Бит 2 -> Ошибка чётности (PE). Бит чётности для принятого слова был "
+"некорректен. +\n"
+"Бит 1 -> Ошибка переполнения (OE). Было получено новое слово, но в буфере "
+"приема не было места. Вновь поступившее слово в сдвиговом регистре "
+"отбрасывается. На UART 8250/16450 слово в регистре хранения отбрасывается, а "
+"вновь поступившее слово помещается в регистр хранения. +\n"
+"Бит 0 -> Данные готовы (DR). Одно или несколько слов находятся в FIFO "
+"приемника, которые хост может прочитать. Слово должно быть полностью принято "
+"и перемещено из сдвигового регистра в FIFO (или регистр хранения для 8250/"
+"16450) до того, как этот бит будет установлен."
 
 #. type: Table
 #: documentation/content/en/articles/serial-uart/_index.adoc:801
@@ -3046,10 +3088,10 @@ msgid ""
 "MYKERNEL and editing with vi."
 msgstr ""
 "Если у вас ещё нет настроенного файла конфигурации пользовательского ядра, "
-"обратитесь к extref:{handbook}kernelconfig[Конфигурация ядра, kernelconfig] "
-"в руководстве FreeBSD для получения общих инструкций. Ниже приведены "
-"конкретные настройки для платы Boca 16, предполагается, что вы используете "
-"ядро с именем MYKERNEL и редактируете его с помощью vi."
+"обратитесь к разделу extref:{handbook}kernelconfig[Конфигурация ядра, "
+"kernelconfig] в руководстве FreeBSD для получения общих инструкций. Ниже "
+"приведены конкретные настройки для платы Boca 16, предполагается, что вы "
+"используете ядро с именем MYKERNEL и редактируете его с помощью vi."
 
 #. type: delimited block = 4
 #: documentation/content/en/articles/serial-uart/_index.adoc:887
