--- a/documentation/content/ru/articles/vpn-ipsec/_index.po
+++ b/documentation/content/ru/articles/vpn-ipsec/_index.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
 "POT-Creation-Date: 2024-01-17 20:35-0300\n"
-"PO-Revision-Date: 2025-08-02 15:10+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/articlesvpn-ipsec_index/ru/>\n"
@@ -414,7 +414,7 @@ msgid ""
 "[.filename]#/usr/local/etc/racoon/racoon.conf# on both gateways will be "
 "identical and look similar to:"
 msgstr ""
-"На этом этапе трафик передается между сетями, инкапсулированный в туннель "
+"На этом этапе трафик передаётся между сетями, инкапсулированный в туннель "
 "gif, но без какого-либо шифрования. Далее используйте IPSec для шифрования "
 "трафика с использованием предварительно согласованных ключей (PSK). За "
 "исключением IP-адресов, файл [.filename]#/usr/local/etc/racoon/racoon.conf# "
